--- a/learn-certs-pr/azure-solutions-architect.yml
+++ b/learn-certs-pr/azure-solutions-architect.yml
@@ -15,6 +15,13 @@ summary: |-
   Для реализации решений, архитекторы решений Azure сотрудничает с облачными администраторами, облачными администраторами баз данных и непосредственно с клиентами.
 
   Кандидат на получение сертификата должен обладать передовым опытом и знаниями в области IT-операций, включая сетевые технологии, виртуализацию, идентификацию, безопасность, непрерывность бизнеса, аварийное восстановление, платформу данных, бюджетирование и управление. Эта роль должна управлять и контролировать то, как решения в каждой области влияют на общее решение. Кроме того, эта роль требует обладания навыками экспертного уровня в администрировании Azure и наличия опыта работы с процессами разработки Azure и процессами DevOps.
+
+  <div><strong><br/>Примечание&#58; Вы получите этот сертификат, если сдадите одну из следующих комбинаций экзаменов&#58; <ul>
+  <li><a href="/learn/certifications/exams/az-300">AZ-300</a> and <a href="/learn/certifications/exams/az-301">AZ-301</a></li>
+  <li><a href="/learn/certifications/exams/az-303">AZ-303</a> and <a href="/learn/certifications/exams/az-304">AZ-304</a></li>
+  <li><a href="/learn/certifications/exams/az-300">AZ-300</a> and <a href="/learn/certifications/exams/az-304">AZ-304</a></li>
+  <li><a href="/learn/certifications/exams/az-301">AZ-301</a> and <a href="/learn/certifications/exams/az-303">AZ-303</a></li>
+  </ul></strong></div>
 subTitle: Архитектор решений Azure Solution Architects разрабатывает и внедряет решения, работающие в Microsoft Azure, включая такие аспекты, как вычисления, сеть, хранилище и безопасность.
 levels:
 - advanced
