--- a/learn-certs-pr/courses/az-303t00.yml
+++ b/learn-certs-pr/courses/az-303t00.yml
@@ -3,19 +3,18 @@ title: Microsoft Azure Architect Technologies
 metadata:
   title: 'Course AZ-303T00-A: Microsoft Azure Architect Technologies'
   description: 'Course AZ-303T00-A: Microsoft Azure Architect Technologies'
-  iltScheduling: true
 uid: course.az-303t00
 courseNumber: 'AZ-303T00-A'
 hoursToComplete: 120
 iconUrl: /media/learn/certification/course.svg
 skillsGained:
-- skill: Обеспечение безопасности удостоверений с помощью Azure Active Directory, а также пользователей и групп
+- skill: Обеспечение безопасности удостоверений с помощью Azure Active Directory, а также пользователей и групп.
 - skill: Внедрение решений для идентификации, включающих локальные и облачные возможности
-- skill: Применение решений по контролю для сбора, объединения и анализа данных из разных источников
-- skill: Управление подписками, учетными записями, политиками Azure, а также управление доступом на основе ролей
-- skill: Администрирование Azure с помощью Resource Manager, Azure portal, Cloud Shell, и CLI
-- skill: Настройка межсайтовых решений для подключения, таких как пиринг виртуальных сетей и шлюзы виртуальных сетей
-- skill: Администрирование Azure App Service, Azure Container Instances и Kubernetes
+- skill: Применение решений по контролю для сбора, объединения и анализа данных из разных источников.
+- skill: Управление подписками, учетными записями, политиками Azure, а также управление доступом на основе ролей.
+- skill: Администрирование Azure с помощью Resource Manager, Azure portal, Cloud Shell, и CLI.
+- skill: Настройка межсайтовых решений для подключения, таких как пиринг виртуальных сетей и шлюзы виртуальных сетей.
+- skill: Администрирование Azure App Service, Azure Container Instances и Kubernetes.
 learningPartnersLink: https://www.microsoft.com/learning/partners.aspx
 locales:
 - en
@@ -39,41 +38,7 @@ prerequisitesSection: |-
   - Понимание концепций Active Directory, включая домены, леса, контроллеры доменов, репликацию, протокол Kerberos и протокол облегченного доступа к каталогам (LDAP).
   - Понимание устойчивости и аварийного восстановления, включая операции резервного копирования и восстановления.
 outlineSection: |-
-  ### Модуль 1&#58; Внедрение виртуальных машин для Windows и Linux
-  В этом модуле вы узнаете о виртуальных машинах Azure, включая планирование, создание, доступность и расширения. Этот модуль включает в себя&#58;
-  #### Уроки
-  - Выбор размера виртуальной машины
-  - Настройка высокой доступности
-  - Внедрение Azure Dedicated Hosts
-  - Развертывание и настройка Scale sets
-  - Настройка шифрования диска Azure
-
-  После завершения этого модуля студенты смогут следующее&#58;
-  - Планирование реализации виртуальных машин
-  - Создание виртуальных машин
-  - Настройка доступности виртуальной машины, включая наборы масштабов
-  - Понимание параметров высокой доступности для виртуальных машин в Azure
-
-
-  ### Модуль 2&#58; Автоматизация развертывания и настройки ресурсов
-  В этом модуле вы узнаете об инструментах, которые администратор Azure использует для управления своей инфраструктурой. К ним относятся шаблоны Azure Portal, Cloud Shell, Azure PowerShell, CLI и Resource Manager. Этот модуль включает в себя&#58;
-  #### Уроки
-  - Шаблоны Azure Resource Manager
-  - Сохранение шаблона для виртуальной машины
-  - Оценка местонахождения новых ресурсов
-  - Настройка шаблона виртуального жесткого диска
-  - Развертывание из шаблона
-  - Создание и выполнение Runbook Automation
-
-  После завершения этого модуля студенты смогут следующее&#58;
-  - Использование Azure Resource Manager для организации ресурсов
-  - Использование шаблонов ARM для развертывания ресурсов
-  - Создание и выполнение Runbook Automation
-  - Разверните виртуальной машины Azure с виртуального жесткого диска
-  - Понимание технологии шифрования Azure
-
-
-  ### Модуль 3&#58; Внедрение виртуальных сетей
+  ### Модуль 1&#58; Внедрение виртуальных сетей
   В этом модуле вы узнаете об основных концепциях виртуальных сетей, таких как виртуальные сети и подсети, IP-адресация, группы безопасности сети, брандмауэр Azure и Azure DNS.
   #### Уроки
   - Пиринг виртуальных сетей
@@ -84,6 +49,40 @@ outlineSection: |-
   - Настройка пиринга в виртуальных сетях
   - Понимание цепочки служб
   - Изменение или удаление пиринга виртуальных сетей
+
+
+  ### Модуль 2&#58; Внедрение виртуальных машин для Windows и Linux
+  В этом модуле вы узнаете о виртуальных машинах Azure, включая планирование, создание, доступность и расширения. Этот модуль включает в себя&#58;
+  #### Уроки
+  - Выбор размера виртуальной машины
+  - Настройка высокой доступности
+  - Внедрение Azure Dedicated Hosts
+  - Развертывание и настройка Scale sets
+  - Настройка шифрования диска Azure
+
+  После завершения этого модуля студенты смогут следующее&#58; 
+  - Планирование реализации виртуальных машин
+  - Создание виртуальных машин
+  - Настройка доступности виртуальной машины, включая наборы масштабов
+  - Понимание параметров высокой доступности для виртуальных машин в Azure
+
+
+  ### Модуль 3&#58; Автоматизация развертывания и настройки ресурсов
+  В этом модуле вы узнаете об инструментах, которые администратор Azure использует для управления своей инфраструктурой. К ним относятся шаблоны Azure Portal, Cloud Shell, Azure PowerShell, CLI и Resource Manager. Этот модуль включает в себя&#58;
+  #### Уроки
+  - Шаблоны Azure Resource Manager
+  - Сохранение шаблона для виртуальной машины
+  - Оценка местонахождения новых ресурсов
+  - Настройка шаблона виртуального жесткого диска
+  - Развертывание из шаблона
+  - Создание и выполнение Runbook Automation
+
+  После завершения этого модуля студенты смогут следующее&#58; 
+  - Использование Azure Resource Manager для организации ресурсов
+  - Использование шаблонов ARM для развертывания ресурсов
+  - Создание и выполнение Runbook Automation
+  - Разверните виртуальной машины Azure с виртуального жесткого диска
+  - Понимание технологии шифрования Azure
 
 
   ### Модуль 4&#58; Реализация балансировки нагрузки и сетевой безопасности
@@ -98,7 +97,13 @@ outlineSection: |-
   - Внедрение Network Security Groups и Application Security Group
   - Внедрение Azure Bastion
 
-  После завершения этого модуля студенты смогут следующее&#58;
+  #### Лабораторная работа&#58; реализация высокодоступной вычислительной архитектуры Azure IaaS
+  -Описание характеристик высокодоступных виртуальных машин Azure, находящихся в одной и той же зоне доступности
+  - Описание характеристик высокодоступных виртуальных машин Azure, находящихся в разных зонах доступности
+  - Описание характеристик автоматического горизонтального масштабирования масштабируемых наборов виртуальных машин Azure.
+  - Описание характеристик ручного вертикального масштабирования наборов масштабирования виртуальных машин Azure.
+
+  После завершения этого модуля студенты смогут следующее&#58; 
   - Выбор решения для балансировки нагрузки
   - Настройка шлюза приложений (Application Gateway)
   - Внедрение Azure Firewall
@@ -108,7 +113,7 @@ outlineSection: |-
 
 
   ### Модуль 5&#58; Внедрение учетных записей хранения (Storage Accounts)
-  В этом модуле вы узнаете об основных функциях и свойствах хранилища, включая учетные записи хранилища, хранилище blob-объектов, файлы Azure и синхронизацию файлов, безопасность хранилища и инструменты хранилища. 
+  В этом модуле вы узнаете об основных функциях и свойствах хранилища, включая учетные записи хранилища, хранилище blob-объектов, файлы Azure и синхронизацию файлов, безопасность хранилища и инструменты хранилища.
   #### Уроки
   - Учетные записи хранилища
   - Хранение BLOB-объектов
@@ -117,7 +122,7 @@ outlineSection: |-
   - Доступ к BLOB-объектам и Queues с использованием AAD
   - Настройка брандмауэров хранилища Azure (Azure Storage Firewalls) и виртуальных сетей
 
-  После завершения этого модуля студенты смогут следующее&#58;
+  После завершения этого модуля студенты смогут следующее&#58; 
   - Понимание служб Storage Accounts и типы учетных записей хранения
   - Настройка хранилища BLOB-объектов, учетных записей, контейнеров и уровней доступа
   - Внедрение Shared Access Signatures
@@ -138,7 +143,7 @@ outlineSection: |-
   - Настройка гостевых пользователей в Azure AD
   - Управление несколькими директориями
 
-  После завершения этого модуля студенты смогут следующее&#58;
+  После завершения этого модуля студенты смогут следующее&#58; 
   - Понимание взаимодействия нескольких организаций AAD
   - Добавление гостевых пользователей в Azure AD
   - Настройка Location Condition Configuration
@@ -156,7 +161,16 @@ outlineSection: |-
   - Внедрение и настройка политики Azure
   - Azure Blueprints
 
-  После завершения этого модуля студенты смогут следующее&#58;
+  #### Лабораторная работа&#58; внедрение и настройка служб файлов хранилища Azure и Blob-объектов.
+  - Внедрение авторизации Blob-объектов службы хранилища Azure с помощью подписей общего доступа
+  - Внедрение авторизации больших двоичных объектов службы хранилища Azure с помощью Azure Active Directory
+  - Внедрение авторизации общих файловых ресурсов службы хранилища Azure с помощью ключей доступа
+
+  #### Лабораторная работа&#58; Управление контролем доступа в Azure на основе ролей (RBAC).
+  - Определение пользовательской роли RBAC
+  - Назначение пользовательской роли RBAC
+
+  После завершения этого модуля студенты смогут следующее&#58; 
   - Понимание организации ресурсов группы (Resource Group Organization)
   - Понимание принципа работы RBAC
   - Создание обзора на Azure AD access
@@ -171,7 +185,7 @@ outlineSection: |-
   - Настройка Password Sync и Password Writeback
   - Настройка Azure AD Connect Health
 
-  После завершения этого модуля студенты смогут следующее&#58;
+  После завершения этого модуля студенты смогут следующее&#58; 
   - Внедрение Azure AD seamless Single Sign-On
   - Установка Azure AD Connect
   - Внедрение Azure AD Connect Health
@@ -187,7 +201,13 @@ outlineSection: |-
   - Восстановление сайтов Azure на Azure
   - Внедрение Azure Update Management
 
-  После завершения этого модуля студенты смогут следующее&#58;
+  #### Лабораторная работа&#58; защита виртуальных машин Hyper-V с помощью Azure Site Recovery.
+  - Настройка Azure Site Recovery
+  - Выполнение тестовой отработки аварийного переключения
+  - Выполнение запланированной отработки аварийного переключения
+  - Выполнение незапланированной отработки аварийного переключения
+
+  После завершения этого модуля студенты смогут следующее&#58; 
   - Понимание архитектуры миграции на основе агентов
   - Подготовка к Azure для миграции
   - Подготовка среды для локальной VMware
@@ -209,6 +229,10 @@ outlineSection: |-
   - Azure Application Insights
   - Unified Monitoring in Azure
 
+  В этом модуле вы узнаете следующее&#58; 
+  - Знакомство с Azure Log Analytics
+  - Понимание работоспособности службы Azure Service Health
+
 
   ### Модуль 11&#58; Управление безопасностью приложений
   В этом модуле вы узнаете о хранилище ключей Azure Key Vault и реализации проверки подлинности с использованием управляемых удостоверений Azure.
@@ -216,7 +240,7 @@ outlineSection: |-
   - Azure Key Vault
   - Azure Managed Identity
 
-  После завершения этого модуля студенты смогут следующее&#58;
+  После завершения этого модуля студенты смогут следующее&#58; 
   - Использование Key Vault, например, секреты, ключи и управление сертификатами
   - Использование управляемых удостоверений с ресурсами Azure
 
@@ -232,7 +256,15 @@ outlineSection: |-
   - Внедрение Logic Apps
   - Реализация функций Azure
 
-  После завершения этого модуля студенты смогут следующее&#58;
+  #### Лабораторная работа&#58; Настройка архитектуры интеграции на основе сообщений
+  - Настройка и проверка триггера BLOB-объекта хранилища приложений Azure Function
+  - Настройка и проверка очереди сообщений на основе подписки Azure Event Grid`
+
+  #### Лабораторная работа&#58; внедрение веб-приложения службы приложений Azure с промежуточным слотом
+  - Внедрение шаблона развертывания синий/зеленый с помощью слотов развертывания веб-приложений службы приложений Azure.
+  - Выполнение A/B-тестирования с использованием слотов развертывания веб-приложений службы приложений Azure.
+
+  После завершения этого модуля студенты смогут следующее&#58; 
   - Настройка службы приложений Azure
   - Создание плана обслуживания приложения
   - Создание рабочего процесса с помощью Azure Logic Apps
