--- a/learn-certs-pr/courses/az-500t00.yml
+++ b/learn-certs-pr/courses/az-500t00.yml
@@ -3,17 +3,27 @@ title: Microsoft Azure Security Technologies
 metadata:
   title: 'Course AZ-500T00-A: Microsoft Azure Security Technologies'
   description: 'Course AZ-500T00-A: Microsoft Azure Security Technologies'
-  iltScheduling: true
 uid: course.az-500t00
 courseNumber: 'AZ-500T00-A'
 hoursToComplete: 96
 iconUrl: /media/learn/certification/course.svg
 skillsGained:
-- skill: Описание специализированной классификации данных в Azure
-- skill: Определение механизмов защиты данных Azure
-- skill: Реализация методов шифрования данных Azure
-- skill: Безопасные интернет-протоколы и их реализация в Azure
-- skill: Описание служб и функций безопасности Azure
+- skill: Внедрение стратегий корпоративного управления, включая управление доступом на основе ролей, политики Azure и блокировку ресурсов.
+- skill: Внедрение инфраструктуры Azure AD, включая пользователей, группы и многофакторную аутентификацию.
+- skill: Внедрение защиты идентификации Azure AD, включая политики рисков, условный доступ и проверки доступа.
+- skill: Внедрение управления привилегированными удостоверениями Azure AD, включая роли Azure AD и ресурсы Azure.
+- skill: Внедрение Azure AD Connect, включая методы проверки подлинности и локальную синхронизацию каталогов.
+- skill: Внедрение стратегий безопасности периметра, включая брандмауэр Azure.
+- skill: Внедрение стратегий сетевой безопасности, включая группы безопасности сети и группы безопасности приложений.
+- skill: Внедрение стратегий безопасности хоста, включая защиту конечных точек, управление удаленным доступом, управление обновлениями и шифрование диска.
+- skill: Внедрение стратегии безопасности контейнеров, включая экземпляры контейнеров Azure, реестр контейнеров Azure и Azure Kubernetes.
+- skill: Внедрение Azure Key Vault, включая сертификаты, ключи и секреты.
+- skill: Внедрение стратегий безопасности приложений, включая регистрацию приложений, управляемые удостоверения и конечные точки служб.
+- skill: Внедрение стратегий безопасности хранилища, включая подписи общего доступа, политики хранения больших двоичных объектов и проверку подлинности файлов Azure.
+- skill: Внедрение стратегий безопасности базы данных, включая аутентификацию, классификацию данных, динамическое маскирование данных и всегда зашифрованные.
+- skill: Внедрение Azure Monitor, включая подключенные источники, аналитику журналов и предупреждения.
+- skill: Внедрение Центра безопасности Azure Security Center, включая политики, рекомендации и своевременный доступ к виртуальной машине.
+- skill: Внедрение Azure Sentinel, включая книги, экземпляры и учебники.
 learningPartnersLink: https://www.microsoft.com/learning/partners.aspx
 locales:
 - en
@@ -31,50 +41,107 @@ products:
 exams:
 - uid: exam.az-500
 summary: |-
-  В этом курсе слушатели получат знания и
-  навыки, необходимые для реализации контроля безопасности, поддержания состояния безопасности,
-  а также выявления и устранения уязвимостей с помощью различных
-  инструментов безопасности. Курс охватывает использование скриптов и автоматизацию, виртуализацию и облачную 
-  N-уровневую архитектуру.
+  Этот курс предоставляет специалистам по ИТ-безопасности знания и навыки, необходимые для реализации мер безопасности, поддержания уровня безопасности организации, а также выявления и устранения уязвимостей безопасности. Этот курс включает в себя безопасность идентификации и доступа, защиту платформы, данных и приложений, а также операции по обеспечению безопасности.
 
   #### Профиль аудитории
-  Слушатели должны иметь по крайней мере один год практического опыта защиты рабочих нагрузок Azure и иметь опыт управления безопасностью рабочих нагрузок в Azure.
+  Этот курс предназначен для инженеров по безопасности Azure, которые планируют сдать соответствующий сертификационный экзамен или которые выполняют задачи безопасности в своей повседневной работе. Этот курс также будет полезен инженеру, который хочет специализироваться на обеспечении безопасности цифровых платформ на базе Azure и играть важную роль в защите данных своей организации.
 prerequisitesSection: |-
-  [Microsoft Azure Administrator Associate](https://docs.microsoft.com/learn/certifications/azure-administrator)
+  Чтобы получить максимальную отдачу от этого курса, студенты должны&#58;
+  - Изучить передовой опыт безопасности и отраслевые требования безопасности, такие как глубокая защита, наименее привилегированный доступ, управление доступом на основе ролей, многофакторная аутентификация, совместная ответственность и модель нулевого доверия.
+  - Ознакомиться с такими протоколами безопасности, как виртуальные частные сети (VPN), протокол безопасности Интернета (IPSec), слой защищённых сокетов Secure Socket Layer (SSL), методы шифрования дисков и данных.
+  - Иметь некоторый опыт развертывания рабочих нагрузок Azure. Этот курс не охватывает основ администрирования Azure. Содержание курса основывается на наличии у обучаемого этих знаний, добавляя к ним информацию, относящуюся к безопасности.
+  - Вы должны иметь опыт работы с операционными системами Windows и Linux и языками сценариев. Лабораторные работы курса могут использовать PowerShell и интерфейс командной строки.
+
+  Чтобы подготовиться к этому уроку, вы можете пройти этот бесплатный онлайн-тренинг.
+  - [Основы Azure](/learn/paths/azure-fundamentals/)
+  - [AZ-104&#58; Предварительные требования для администраторов Azure](/learn/paths/az-104-administrator-prerequisites/)
 outlineSection: |-
-  ### Модуль 1&#58; Идентификация и доступ
+  ### Модуль 1&#58; Управление идентификацией и доступом
+  Этот модуль охватывает Azure Active Directory, защиту идентификации Azure Identity Protection, Управление предприятием Enterprise Governance, Управление привилегированной идентификацией Azure AD PIM и гибридную идентификацию Hybrid Identity.
   #### Уроки
-  - Настройка Azure Active Directory для рабочих нагрузок и подписок Azure
-  - Настройка управления привилегированными удостоверениями Azure AD
-  - Настройка безопасности для подписок Azure
+  - Azure Active Directory
+  - Защита идентификации Azure Identity Protection
+  - Управление предприятием (Enterprise Governance)
+  - Управление привилегированной идентификацией Azure AD PIM
+  - гибридной идентификации
+
+  #### Лабораторная работа&#58; управление доступом на основе ролей
+
+  #### Лабораторная работа&#58; политика Azure
+
+  #### Лабораторная работа&#58; блокировки диспетчера ресурсов
+
+  #### Лабораторная работа&#58; MFA, условный доступ и защита идентификации AAD
+
+  #### Лабораторная работа&#58; Управление привилегированными удостоверениями Azure AD
+
+  #### Лабораторная работа&#58; реализация синхронизации каталогов
+
+  После завершения этого модуля студенты смогут следующее&#58;
+  - Внедрение стратегий корпоративного управления, включая управление доступом на основе ролей, политики Azure и блокировку ресурсов.
+  - Внедрение инфраструктуры Azure AD, включая пользователей, группы и многофакторную аутентификацию.
+  - Внедрение защиты идентификации Azure AD, включая политики рисков, условный доступ и проверки доступа.
+  - Внедрение управления привилегированными удостоверениями Azure AD, включая роли Azure AD и ресурсы Azure.
+  - Внедрение Azure AD Connect, включая методы проверки подлинности и локальную синхронизацию каталогов.
 
 
-  ### Модуль 2&#58; Защита платформы
+  ### Модуль 2&#58; Внедрение защиты платформы
+  Этот модуль охватывает безопасность периметра, сети, хоста и контейнера.
   #### Уроки
-  - Понятие облачной безопасности
-  - Построение сетей
-  - Защита сетей
-  - Реализация безопасности хостов
-  - Реализация безопасности платформы
-  - Реализация безопасности подписок
+  - Безопасность периметра
+  - Сетевая безопасность
+  - Безопасность хоста
+  - Безопасность контейнеров
+
+  #### Лабораторная работа&#58; Группы безопасности сети и группы безопасности приложений.
+
+  #### Лабораторная работа&#58; брандмауэр Azure.
+
+  #### Лабораторная работа&#58; Настройка и защита ACR и AKS.
+
+  После завершения этого модуля студенты смогут следующее&#58;
+  - Внедрение стратегий безопасности периметра, включая брандмауэр Azure.
+  - Внедрение стратегий сетевой безопасности, включая группы безопасности сети и группы безопасности приложений.
+  - Внедрение стратегий безопасности хоста, включая защиту конечных точек, управление удаленным доступом, управление обновлениями и шифрование диска.
+  - Внедрение стратегии безопасности контейнеров, включая экземпляры контейнеров Azure, реестр контейнеров Azure и Azure Kubernetes.
 
 
-  ### Модуль 3&#58; Управление безопасностью
+  ### Модуль 3&#58; Безопасность данных и приложений
+  Этот модуль охватывает Azure Key Vault, безопасность приложений, безопасность хранилища и безопасность базы данных SQL.
   #### Уроки
-  - Настройка служб безопасности
-  - Настройка политик безопасности с использованием Azure Security Center
-  - Настройка уведомлений безопасности
-  - Реагирование и устранение проблем безопасности
-  - Создание базовых показателей (baselines) безопасности
+  - Azure Key Vault
+  - Безопасность приложений
+  - Безопасность хранилища
+  - Безопасность базы данных SQL
+
+  #### Лабораторная работа&#58; Key Vault (реализация защищенных данных путем настройки Always Encrypted)
+
+  #### Лабораторная работа&#58; защита базы данных Azure SQL.
+
+  #### Лабораторная работа&#58; конечные точки служб и защита хранилища
+
+  После завершения этого модуля студенты смогут следующее&#58;
+  - Внедрение Azure Key Vault, включая сертификаты, ключи и секреты.
+  - Внедрение стратегий безопасности приложений, включая регистрацию приложений, управляемые удостоверения и конечные точки служб.
+  - Внедрение стратегий безопасности хранилища, включая подписи общего доступа, политики хранения больших двоичных объектов и проверку подлинности файлов Azure.
+  - Внедрение стратегий безопасности базы данных, включая аутентификацию, классификацию данных, динамическое маскирование данных и всегда зашифрованные.
 
 
-  ### Модуль 4&#58; Данные и приложения
+  ### Модуль 4&#58; Управление операциями безопасности
+  Этот модуль охватывает Azure Monitor, Центр безопасности Azure и Azure Sentinel.
   #### Уроки
-  - Настройка политик безопасности для защиты данных
-  - Настройка безопасности для инфраструктуры данных
-  - Настройка шифрования для данных в состоянии покоя
-  - Понимание безопасности для приложений
-  - Реализация безопасности для жизненного цикла приложения
-  - Защита приложений
-  - Настройка и управление хранилищем ключей Azure (Azure Key Vault)
+  - Azure Monitor
+  - Центр безопасности Azure
+  - Azure Sentinel
+
+  #### Лабораторная работа&#58; Azure Monitor
+
+  #### Лабораторная работа&#58; Центр безопасности Azure
+
+  #### Лабораторная работа&#58; Azure Sentinel
+
+  После завершения этого модуля студенты смогут следующее&#58;
+  - Внедрение Azure Monitor, включая подключенные источники, аналитику журналов и предупреждения.
+  - Внедрение Центра безопасности Azure Security Center, включая политики, рекомендации и своевременный доступ к виртуальной машине.
+  - Внедрение Azure Sentinel, включая книги, экземпляры и учебники.
 
