--- a/learn-certs-pr/courses/mb-600t00.yml
+++ b/learn-certs-pr/courses/mb-600t00.yml
@@ -1,8 +1,8 @@
-﻿### YamlMime:Course
-title: 'Microsoft Power Apps + Dynamics 365 Solution Architect'
+### YamlMime:Course
+title: 'Microsoft Dynamics 365 + Power Platform Solution Architect'
 metadata:
-  title: 'Course MB-600T00-A: Microsoft Power Apps + Dynamics 365 Solution Architect'
-  description: 'Course MB-600T00-A: Microsoft Power Apps + Dynamics 365 Solution Architect'
+  title: 'Course MB-600T00-A: Microsoft Dynamics 365 + Power Platform Solution Architect'
+  description: 'Course MB-600T00-A: Microsoft Dynamics 365 + Power Platform Solution Architect'
 uid: course.mb-600t00
 courseNumber: 'MB-600T00-A'
 hoursToComplete: 72
@@ -15,7 +15,7 @@ levels:
 roles:
 - solution-architect
 products:
-- dynamics
+- dynamics-365
 - power-apps
 exams:
 - uid: exam.mb-600
@@ -23,22 +23,17 @@ summary: |-
   Архитектор решений отвечает за успешное проектирование, внедрение, развертывание и принятие общего решения. Архитектор решений гарантирует, что решение удовлетворяет потребности клиента сейчас и в будущем. На этом курсе слушатели узнают о решениях, которые Архитектор решений принимает во время реализации, в том числе о безопасности, интеграции, архитектуре Power Apps, архитектуре Power Automate и многом другом. Этот курс предназначен для ознакомления с ролью Архитектора решений.
 
   #### Профиль аудитории
-  
-  Старшие консультанты (как функциональные, так и технические), стремящиеся стать архитекторами решений или действующие Архитекторы решений, которые являются новичками в этой роли.  
+
+  Старшие консультанты (как функциональные, так и технические), стремящиеся стать архитекторами решений или действующие Архитекторы решений, которые являются новичками в этой роли.
 prerequisitesSection: |-
   Перед посещением этого курса студенты должны иметь&#58;
-  
+
   - Сдан экзамен MB-200
   - Опыт работы с Dynamics 365 и Power Platform
   - Старший консультант (функциональный или технический) или Архитектор решений, недавно в этой роли
   - Некоторые знания Microsoft Azure
-outlineSection: |-  
-  ### Модуль1&#58; Введение
-  
-  Введение в курс
-  
-  ### Модуль 2&#58; Как стать архитектором решений. Знакомство с клиентом
-
+outlineSection: |-
+  ### Модуль 1&#58; Как стать архитектором решений. Знакомство с клиентом
   #### Уроки
   - Определение архитектора решений
   - Роль Архитектора решений в проектах
@@ -46,51 +41,51 @@ outlineSection: |-
   - Знакомство с вашим клиентом
   - Групповые упражнения - Знакомство с вашим клиентом
 
-  ### Модуль 3&#58; Концептуализация дизайна в зависимости от требований
-  
+
+  ### Модуль 2&#58; Концептуализация дизайна в зависимости от требований
   #### Уроки
   - Как руководить сбором требований
   - Использование анализа соответствия
   - Столпы хорошей архитектуры
   - Проектирование архитектуры решения
   - Групповые упражнения - Дизайн  зависимости от требований
-  
-  ### Модуль 4&#58; Управление проектом и работа в команде
-    
+
+
+  ### Модуль 3&#58; Управление проектом и работа в команде
   #### Уроки
   - Роль архитектора решений в управлении проектами
   - Техника для поддержания проекта на ходу
   - Сценарии, которые могут привести к провалу проекта
   - Групповые упражнения - Управление проектом и работа в команде
-  
-  ### Модуль 5&#58; Архитектура Power Platform
-  
+
+
+  ### Модуль 4&#58; Архитектура Power Platform
   #### Уроки
   - Ключевые компоненты архитектуры Power Platform
-  - Как дизайн платформы и ее ограничения влияют на архитектуру решения.
+  - Как дизайн платформы и ее ограничения влияют на архитектуру решения
   - Обновления и выпуски функций
   - Как сообщить о том, как платформа отвечает потребностям клиентов
-  
-  ### Модуль  6&#58; Моделирование данных
-  
+
+
+  ### Модуль 5&#58; Моделирование данных
   #### Уроки
   - Влияния модели данных
   - Стратегия модели данных
   - Типы данных
   - Отношения данных
   - Групповое упражнение - Моделирование данных
-  
-  ### Модуль 7&#58; Визуализации, Аналитика, Отчетность и ИИ
-  
+
+
+  ### Модуль 6&#58; Аналитика и искусственный интеллект
   #### Уроки
   - Планирование и оценка требований
   - Оперативная отчетность
   - Power BI
   - BI предприятия
   - Предварительно построенные идеи и пользовательский ИИ
-  
-  ### Модуль 8&#58; Архитектура Power Apps
-  
+
+
+  ### Модуль 7&#58; Архитектура Power Apps
   #### Уроки
   - Обсудить варианты приложений и как выбрать, с чего начать
   - Обсудить варианты композиции приложения
@@ -98,54 +93,55 @@ outlineSection: |-
   - Рекомендации по включению порталов в вашу архитектуру в качестве приложения
   - Групповое упражнение - Темы Power Apps Architecture
 
-  ### Модуль 9&#58; Управление жизненным циклом приложений Application Lifecycle Management (ALM)
-  
+
+  ### Модуль 8&#58; Управление жизненным циклом приложений Application Lifecycle Management (ALM)
   #### Уроки
   - Видение Microsoft и роль Архитектора решений в ALM
   - Стратегии сред
   - Определение структуры решения для вашей цели
-  
+
   #### Лабораторная работа&#58; лабораторный практикум ALM
-  
-  ### Модуль 10&#58; Архитектура Power Automate
-  
+
+
+  ### Модуль 9&#58; Архитектура Power Automate
   #### Уроки
   - Обсудить варианты автоматизации и настраиваемой логики
   - Обзор рекомендаций по использованию триггеров и общих действий
   - Изучение использования потоков бизнес-процессов (BPF) для проведения пользователей через бизнес-процессы.
   - Групповое упражнение - Оцените сценарии использования Power Automate
-  
-  ### Модуль 11&#58; Моделирование безопасности
-  
+
+
+  ### Модуль 10&#58; Моделирование безопасности
   #### Уроки
   - Роль Архитектора решений в моделировании безопасности
   - Обзор и изучение среды вашего клиента
   - Контроль доступа к средам и ресурсам
   - Контроль доступа к данным CDS
   - Групповые упражнения - Моделирование безопасности
-  
-  ### Модуль 12&#58; Интеграция
-  
+
+
+  ### Модуль 11&#58; Интеграция
   #### Уроки
   - Роль Архитекторов решений в интеграции
   - Что такое интеграция и зачем она нам
   - Функции платформы, обеспечивающие интеграцию
   - Публикация событий CDS
   - Сценарии для групповой дискуссии
-  
-  ### Модуль 13&#58; Архитектура приложений Dynamics 365
-  
+
+
+  ### Модуль 12&#58; Архитектура приложений Dynamics 365
   #### Уроки
   - Роль Архитектора решений при развертывании приложений Dynamics 365
   - Особенности архитектуры для основных приложений
   - Групповое упражнение -  требования к оценке рабочих группы по определенным приложениям
-  
-  ### Модуль 14&#58; Тестирование и запуск
-  
+
+
+  ### Модуль 13&#58; Тестирование и запуск
   #### Уроки
   - Роль Архитектора решений в тестировании и запуске
   - Планирование тестирования
   - Планирование запуска
-  
+
   #### Дополнительные сведения
   https://docs.microsoft.com/en-us/learn/paths/become-solution-architect/
+
