--- a/learn-certs-pr/courses/ws-011t00.yml
+++ b/learn-certs-pr/courses/ws-011t00.yml
@@ -17,7 +17,7 @@ skillsGained:
 - skill: Применение функций безопасности для защиты критически важных ресурсов
 - skill: Настройка служб удаленного рабочего стола Remote Desktop
 - skill: Настройка развертывания инфраструктуры настольных компьютеров на основе виртуальных машин
-- skill: Реализация удаленного доступа и веб-сервисов
+- skill: Реализация удаленного доступа и веб-служб
 - skill: Внедрение мониторинга служб и мониторинг производительности, а также применение поиска неисправностей
 - skill: Выполнение обновлений и миграций, связанных с AD DS и хранилищем
 learningPartnersLink: https://www.microsoft.com/learning/partners.aspx
@@ -26,7 +26,7 @@ locales:
 levels:
 - intermediate
 roles:
-- developer
+- administrator
 products:
 - windows-server
 summary: |-
@@ -41,18 +41,17 @@ prerequisitesSection: |-
   - Опыт и понимание основных сетевых технологий, таких как IP-адресация, разрешение имен и протокол динамической конфигурации хоста (DHCP).
   - Опыт работы и понимание Microsoft Hyper-V и основных концепций виртуализации серверов.
   - Осознание основных рекомендаций и практик безопасности.
-  - Опыт работы с клиентскими операционными системами Windows, такими как Windows 8, Windows 8.1 или Windows 10.
-  - Базовый опыт работы с Windows PowerShell.
+  - Опыт работы с клиентскими операционными системами Windows, такими как Windows 8, Windows 8.1 или Windows 10
+  - Базовый опыт работы с Windows PowerShell
 outlineSection: |-
   ### Модуль 1&#58; Обзор Windows Server Administration
   В этом модуле описывается, как различать различные версии Windows Server 2019 и методы развертывания, обслуживания и активации. Модуль также знакомит с Windows Server Core и сравнивает его с версией Desktop Experience. Модуль описывает инструменты и концепции для администрирования Windows Server, такие как Windows Admin Center, PowerShell, а также делегирование привилегий.
   #### Уроки
+  - Обзор принципов и инструментов администрирования Windows Server
   - Знакомство с Windows Server 2019
   - Обзор Windows Server Core
-  - Обзор принципов и инструментов администрирования Windows Server
 
-
-  #### Lab &#58; Развертывание и настройка Windows Server
+  #### Lab&#58; Развертывание и настройка Windows Server
   - Развертывание и настройка Server Core
   - Внедрение и использование удаленного администрирования сервера
 
@@ -61,7 +60,7 @@ outlineSection: |-
   - Описывать Windows Server Core, его особенности и способы его администрирования
 
 
-  ### Модуль 2&#58; Сервисы идентификации в Windows Server
+  ### Модуль 2&#58; Службы идентификации в Windows Server
   Этот модуль знакомит со службами идентификации и описывает доменные службы Active Directory (AD DS) в среде Windows Server. Модуль описывает, как развернуть контроллеры домена в AD DS и Azure Active Directory (AD), а также преимущества интеграции Azure AD с AD DS. Модуль также описывает основы групповой политики и способы настройки объектов групповой политики (GPO) в доменной среде. Наконец, модули рассказывают о роли служб сертификатов Active Directory и использовании сертификатов.
   #### Уроки
   - Обзор AD DS
@@ -70,33 +69,29 @@ outlineSection: |-
   - Внедрение групповой политики
   - Обзор служб сертификации Active Directory
 
-
   #### Лабораторная&#58; Внедрение служб идентификации и групповой политики
   - Развертывание нового контроллера домена на Server Core
   - Настройка групповой политики
-  - Развертывание и использование сервисов сертификации
-  - Объяснение основы групповой политики и настройка объектов групповой политики в доменной среде
-  - Описание роль служб сертификатов Active Directory и использование сертификатов
+  - Развертывание и использование служб сертификации
 
   После завершения этого модуля студенты смогут следующее&#58;
   - Описывать AD DS в среде Windows Server
   - Развертывать контроллеры домена в AD DS
   - Описывать Azure AD и преимущества интеграции Azure AD с AD DS
+  - Объяснение основы групповой политики и настройка объектов групповой политики в доменной среде
+  - Описание роль служб сертификатов Active Directory и использование сертификатов
 
 
-  ### Модуль 3&#58; Сервисы сетевой инфраструктуры в Windows Server
+  ### Модуль 3&#58; Службы сетевой инфраструктуры в Windows Server
   В этом модуле описывается, как внедрять службы основной сетевой инфраструктуры в Windows Server. В модулях рассказывается, как развертывать, настраивать и управлять DNS и IPAM. В модулях также рассказывается, как использовать службы удаленного доступа.
   #### Уроки
   - Развертывание и управление DHCP
   - Развертывание и управление службой DNS
   - Развертывание и управление IPAM
-  - Службы удаленного доступа в Windows Server
 
-
-  #### Лабораторная &#58; Внедрение и настройка служб сетевой инфраструктуры в Windows Server
+  #### Лабораторная&#58; Внедрение и настройка служб сетевой инфраструктуры в Windows Server
   - Развертывание и настройка DHCP
   - Развертывание и настройка DNS
-  - Внедрение прокси веб-приложения
 
   После завершения этого модуля студенты смогут следующее&#58;
   - Описывать, развертывать и настраивать службу DHCP
@@ -114,8 +109,7 @@ outlineSection: |-
   - Внедрение iSCSI
   - Развертывание Distributed File System
 
-
-  #### Лабораторная &#58; Реализация решений для хранения в Windows Server
+  #### Лабораторная&#58; Реализация решений для хранения в Windows Server
   - Реализация дедупликации данных
   - Настройка хранилища iSCSI
   - Настройка избыточных дисковых пространств
@@ -138,14 +132,13 @@ outlineSection: |-
   - Контейнеры в Windows Server
   - Обзор Kubernetes
 
-
-  #### Лабораторная &#58; внедрение и настройка виртуализации в Windows Server
+  #### Лабораторная&#58; внедрение и настройка виртуализации в Windows Server
   - Создание и настройка виртуальных машин
   - Установка и настройка контейнеров
 
   После завершения этого модуля студенты смогут следующее&#58;
-  - Описывать ключевые функции Hyper-V в Windows Server.
-  - Описывать настройки виртуальной машины, а также развертывать и настраивать виртуальные машины в Hyper-V.
+  - Описывать ключевые функции Hyper-V в Windows Server
+  - Описывать настройки виртуальной машины, а также развертывать и настраивать виртуальные машины в Hyper-V
   - Объяснять использование технологий безопасности для виртуализации
   - Описывать и развертывать контейнеры в Windows Server
   - Объяснять использование Kubernetes на Windows
@@ -159,15 +152,15 @@ outlineSection: |-
   - Обзор растягивающихся кластеров
   - Решения высокой доступности и аварийного восстановления с виртуальными машинами Hyper-V
 
-
-  #### Лабораторная &#58; Внедрение отказоустойчивой кластеризации
-  - Настройка хранилища и создание кластера
-  - Развертывание и настройка файлового сервера высокой доступности.
-  - Проверка развертывания файлового сервера высокой доступности.
+  #### Лабораторная&#58; Внедрение отказоустойчивой кластеризации
+  - Настройка хранилища iSCSI
+  - Настройка отказоустойчивого кластера
+  - Развертывание и настройка файлового сервера высокой доступности
+  - Проверка развертывания файлового сервера высокой доступности
 
   После завершения этого модуля студенты смогут следующее&#58;
   - Описание отказоустойчивой кластеризации и соображения по ее реализации
-  - Создать и настроить отказоустойчивый кластеры.
+  - Создать и настроить отказоустойчивый кластеры
   - Описывать растягивающиеся кластеры
   - Описывать варианты обеспечения высокой доступности с виртуальными машинами Hyper-V
 
@@ -178,8 +171,7 @@ outlineSection: |-
   - Hyper-V Replica
   - Резервное копирование и восстановление инфраструктуры в Windows Server
 
-
-  #### Лабораторная &#58; Внедрение Hyper-V Replica и Windows Server Backup
+  #### Лабораторная&#58; Внедрение Hyper-V Replica и Windows Server Backup
   - Внедрение реплики Hyper-V
   - Реализация резервного копирования и восстановления с помощью Windows Server Backup
 
@@ -193,14 +185,13 @@ outlineSection: |-
   ### Модуль 8&#58; Безопасность Windows Server
   В этом модуле описаны средства безопасности Windows Server и способы их реализации. Модуль рассказывает об учетных данных, используемых в Windows Server, и объясняет, как реализовать защиту привилегированного доступа. В дополнение к описанию методов и технологий для усиления безопасности Windows Server, модуль объясняет, как настроить Just Enough Administration (JEA) и как защитить трафик SMB. Наконец, модуль описывает Центр обновления Windows, его варианты развертывания и управления.
   #### Уроки
-  - Учетные данные и защита привилегированного доступа
+  - Учетные данные и защита привилегированного доступа в Windows Server
   - Усиление защиты Windows Server
-  - JEA в Windows Server
+  - Достаточное администрирование в Windows Server
   - Защита и анализ SMB-трафика
   - Управление обновлениями Windows Server
 
-
-  #### Лабораторная &#58; Настройка безопасности в Windows Server
+  #### Лабораторная&#58; Настройка безопасности в Windows Server
   - Настройка Windows Defender Credential Guard
   - Поиск проблемных учетных записей
   - Внедрение LAPS
@@ -214,17 +205,16 @@ outlineSection: |-
   - Описать Центр обновления Windows и его варианты развертывания и управления
 
 
-  ### Модуль 9&#58; RDS в Windows Server
+  ### Модуль 9&#58; Службы удаленных рабочих столов в Windows Server
   В этом модуле описаны основные функции Remote Desktop Protocol (RDP) и Virtual Desktop Infrastructure (VDI) в Windows Server. В модулях описывается, как развертывать рабочие столы на основе сеансов, а также описываются персональные и виртуальные рабочие столы в пулах.
   #### Уроки
-  - Обзор RDS
+  - Обзор служб удаленных рабочих столов
   - Настройка развертывания рабочего стола на основе сеансов
   - Обзор личных и виртуальных рабочих столов в пулах
 
-
-  #### Лабораторная &#58; Внедрение RDS в Windows Server
+  #### Лабораторная&#58; Внедрение RDS в Windows Server
   - Внедрение RDS
-  - Настройка параметров Session Collection и использование RDC
+  - Настройка параметров коллекции RemoteApp
   - Настройка шаблона виртуального рабочего стола
 
   После завершения этого модуля студенты смогут следующее&#58;
@@ -234,15 +224,16 @@ outlineSection: |-
 
 
   ### Модуль 10&#58; Удаленный доступ и веб-службы в Windows Server
-  В этом модуле описывается, как внедрять виртуальные частные сети (VPN), Network Policy Server (NPS) и службы Microsoft Internet Information Services (IIS). Модуль описывает функционал Always On VPN, а также порядок настройки NPS и веб-сервера (IIS) в Windows Server.
+  В этом модуле описывается, как внедрять виртуальные частные сети (VPN), Network Policy Server (NPS) и службы Microsoft Internet Information Services (IIS). В этом модуле представлен обзор служб удаленного доступа и описаны функции Always On VPN, а также способы настройки NPS и веб-сервера (IIS) в Windows Server.
   #### Уроки
+  - Обзор RAS в Windows Server
   - Внедрение VPN
-  - Внедрение Always On VPN
   - Внедрение NPS
+  - Внедрение Always On VPN
   - Внедрение веб-сервера в Windows Server
 
-
-  #### Лабораторная &#58; Развертывание сетевых рабочих нагрузок
+  #### Лабораторная&#58; Развертывание сетевых рабочих нагрузок
+  - Внедрение прокси веб-приложения
   - Внедрение VPN в Windows Server
   - Развертывание и настройка веб-сервера
 
@@ -253,20 +244,18 @@ outlineSection: |-
   - Описывать и настраивать веб-сервер (IIS)
 
 
-  ### Модуль 11&#58; Мониторинг сервера и производительности в Windows Server
+  ### Модуль 11&#58; Мониторинг, производительность и устранение неполадок
   В этом модуле описывается внедрение мониторинг службы и производительности, а также применение процедуры устранения неполадок в Windows Server. Модуль выделяет инструменты мониторинга и описывает, как отслеживать производительность, включая ведение журнала событий и как выполнять мониторинг регистрации событий в целях устранения неполадок.
   #### Уроки
   - Обзор инструментов мониторинга Windows Server
   - Использование монитора производительности
   - Мониторинг журналов событий для устранения неполадок
 
-
-  #### Лабораторная &#58; Мониторинг и устранение неполадок Windows Server
+  #### Лабораторная&#58; Мониторинг и устранение неполадок Windows Server
   - Установление базовых показателей эффективности
   - Определение источника проблемы с производительностью
+  - Просмотр и настройка централизованных журналов событий
   - Определение источника проблемы с производительностью
-
-  Определение источника проблемы с производительностью
   - Описывать инструменты мониторинга в Windows Server
   - Описывать мониторинг производительности и использовать его в Windows Server
   - Описывать ведение журнала событий и выполнять мониторинг регистрации событий в целях устранения неполадок
@@ -279,9 +268,9 @@ outlineSection: |-
   - Служба миграции Storage Migration Service
   - Средства миграции Windows Server
 
-
-  #### Лабораторная &#58; Перенос рабочих нагрузок на сервер
-  - Внедрение службы Storage Migration Service
+  #### Лабораторная&#58; Перенос рабочих нагрузок на сервер
+  - Выбор процесса для переноса серверных нагрузок
+  - Планирование переноса файлов с помощью службы миграции хранилища
 
   После завершения этого модуля студенты смогут следующее&#58;
   - Описывать инструменты, используемые для миграции AD DS
