--- a/learn-certs-pr/devops-engineer.yml
+++ b/learn-certs-pr/devops-engineer.yml
@@ -2,7 +2,7 @@
 title: 'Microsoft Certified: DevOps Engineer Expert'
 metadata:
   title: 'Microsoft Certified: DevOps Engineer Expert'
-  description: 'Специалисты DevOps в Azure объединяют людей, процессы и технологии для непрерывной разработки ценных продуктов и услуг, которые отвечают потребностям конечных пользователей и бизнес-целям.'
+  description: 'Специалисты DevOps в Microsoft объединяют людей, процессы и технологии для непрерывной разработки ценных продуктов и услуг, которые отвечают потребностям конечных пользователей и бизнес-целям.'
 uid: certification.devops-engineer
 iconUrl: /media/learn/certification/badges/microsoft-certified-expert-badge.svg
 summary: |-
@@ -13,7 +13,7 @@ summary: |-
   Список обязанностей в рамках этой роли включает&#58; разработку и внедрение стратегий сотрудничества, кодов и инфраструктуры, которые обеспечивают непрерывную интеграцию, тестирование, поставку, отслеживание и обратную связь.
 
   Кандидат на получение этой сертификации должен быть знаком как с администрированием, так и с разработкой Azure, и должен быть экспертом по крайней мере в одной из этих областей.
-subTitle: Специалисты DevOps в Azure объединяют людей, процессы и технологии для непрерывной разработки ценных продуктов и услуг, которые отвечают потребностям конечных пользователей и бизнес-целям.
+subTitle: Специалисты DevOps в Microsoft объединяют людей, процессы и технологии для непрерывной разработки ценных продуктов и услуг, которые отвечают потребностям конечных пользователей и бизнес-целям.
 levels:
 - advanced
 skills:
