--- a/learn-certs-pr/exams/mb-200.yml
+++ b/learn-certs-pr/exams/mb-200.yml
@@ -9,7 +9,7 @@ summary: |-
   <div>
   <div><font color='red'><strong>Ввиду ситуации с распространением коронавируса (COVID-19) компания Microsoft вносит некоторые временные изменения в свою программу обучения и сертификации. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Узнать больше</a>.</strong></font><br/><br/></div>
   <div><strong>Содержание этого экзамена было обновлено 1 июля 2020 года. Пожалуйста, загрузите документ оценки навыков ниже, чтобы увидеть, что изменилось.</strong><br/><br/></div>
-  <div><strong>ЭТОТ ЭКЗАМЕН БУДЕТ ОТМЕНЕН 31 ДЕКАБРЯ 2020 ГОДА. Для того, чтобы узнать больше <a href="https://aka.ms/microsoftlearncommunity">перейдите в наш блог</a> и посмотрите наши посты об отмене экзаменов. Примечание&#58; Экзамены будут отменены в 23&#58;59 по CST.</strong><br/><br/></div>
+  <div><strong>ЭТОТ ЭКЗАМЕН БУДЕТ ОТМЕНЕН 31 ДЕКАБРЯ 2020 ГОДА. овый экзамен <a href="/learn/certifications/exams/pl-200">PL-200</a> будет доступен в сентябре 2020 года. Для того, чтобы узнать больше <a href="https://aka.ms/microsoftlearncommunity">перейдите в наш блог</a> и посмотрите наши посты об отмене экзаменов. Примечание&#58; Экзамены будут отменены в 23&#58;59 по CST.</strong><br/><br/></div>
   </div>
 
   Кандидаты на этот экзамен являются функциональными консультантами, которые имеют доступ к функциям и функциям лицензированного продукта предприятия. Как функциональный консультант, кандидат знает о связанных версиях функций, но в основном не работает с этими продуктами.
