--- a/learn-certs-pr/exams/mb-700.yml
+++ b/learn-certs-pr/exams/mb-700.yml
@@ -8,7 +8,7 @@ displayName: MB-700
 summary: |-
   <div>
   <div><font color='red'><strong>Ввиду ситуации с распространением коронавируса (COVID-19) компания Microsoft вносит некоторые временные изменения в свою программу обучения и сертификации. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Узнать больше</a>.</strong></font><br/><br/></div>
-  <div><strong>Содержание этого экзамена было обновлено 28 июля 2020 года. Пожалуйста, загрузите документ оценки навыков ниже, чтобы увидеть, что изменилось.</strong><br/><br/></div>
+  <div><strong>Содержание этого экзамена будет обновлено 28 сентябре 2020 года. Пожалуйста, загрузите документ оцениваемых навыков ниже, чтобы узнать об изменениях.</strong><br/><br/></div>
   </div>
 
   Архитекторы решений для приложений Finance and Operations в Microsoft Dynamics 365 являются доверенными консультантами, которые понимают рекомендуемые бизнесом практики, возможности программного обеспечения и реализацию доставки, что им позволяет реализовать решения Dynamics, которые могут достигать заранее определенных целей реализации.
@@ -25,7 +25,7 @@ locales:
 levels:
 - advanced
 skills:
-- Содержание этого экзамена было обновлено 28 июля 2020 года. Пожалуйста, загрузите схему навыков, оцениваемых на экзамене, ниже, чтобы увидеть, что изменилось.
+- Содержание этого экзамена будет обновлено 28 сентябре 2020 года. Пожалуйста, скачайте список навыков, оцениваемых на экзамене, ниже, чтобы увидеть, что меняется.
 - Выявление требований решения (30-35%)
 - Разработка компонентов решения (40-45%)
 - Определение стратегии тестирования и управления решениями (25-30%)
