--- a/learn-certs-pr/exams/ms-101.yml
+++ b/learn-certs-pr/exams/ms-101.yml
@@ -6,11 +6,14 @@ metadata:
 uid: exam.ms-101
 displayName: MS-101
 summary: |-
-  <div style='color&#58; red;'><strong>Ввиду ситуации с распространением коронавируса (COVID-19) компания Microsoft вносит некоторые временные изменения в свою программу обучения и сертификации. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Узнать больше</a>.</strong><br/><br/></div>
+  <div>
+  <div><font color='red'><strong>Ввиду ситуации с распространением коронавируса (COVID-19) компания Microsoft вносит некоторые временные изменения в свою программу обучения и сертификации. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Узнать больше</a>.</strong></font><br/><br/></div>
+  <div><strong>Содержание этого экзамена будет обновлено 24 сентябре 2020 года. Пожалуйста, загрузите документ оцениваемых навыков ниже, чтобы узнать об изменениях.</strong><br/><br/></div>
+  </div>
 
   Кандидатами на этот экзамен являются сертифицированные администраторы Microsoft 365 Enterprise, которые участвуют в оценке, планировании, переносе, развертывании и управлении службами Microsoft 365. Они выполняют задачи по управлению арендой в Microsoft 365 для организаций, в том числе управление идентификациями, безопасностью, соответствием стандартам и поддержкой технологий.
 
-  Кандидаты должны знать рабочие пространства Microsoft 365 и должны иметь опыт администрирования хотя бы одного рабочего пространства Microsoft 365 (Exchange, SharePoint, Skype for Business, или Windows as a Service). Кандидаты должны обладать познаниями в проектировании сетей, серверном администрировании и основных понятиях IT, таких как DNS, активная директория и PowerShell.
+   Кандидаты должны знать рабочие пространства Microsoft 365 и должны иметь опыт администрирования хотя бы одного рабочего пространства Microsoft 365 (Exchange, SharePoint, Skype for Business, или Windows as a Service). Кандидаты должны обладать познаниями в проектировании сетей, серверном администрировании и основных понятиях IT, таких как DNS, активная директория и PowerShell.
 subTitle: 'Этот экзамен позволяет оценить вашу способность выполнять следующие технические задачи: внедрение служб современных устройств; внедрение Microsoft 365 Security and Threat Management; и управление руководством и соответствием в Microsoft 365.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE3VEHZ
@@ -22,8 +25,9 @@ locales:
 levels:
 - advanced
 skills:
+- Содержание этого экзамена будет обновлено 24 сентябре 2020 года. Пожалуйста, скачайте список навыков, оцениваемых на экзамене, ниже, чтобы увидеть, что меняется.
 - Внедрение служб современных устройств (30-35%)
-- Внедрение Microsoft 365 Security and Threat Management (30-35%)
+- Внедрение Microsoft 365 для обеспечения безопасности и управления угрозами (30-35%)
 - Управление руководством и соответствием в Microsoft 365 (35-40%)
 roles:
 - administrator
@@ -45,7 +49,7 @@ resources:
 - title: Плакат с сертификацией
   description: Ознакомьтесь с обзором сертификации основ, ролевой и специальной сертификациями.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE2PjDI
-- title: Exam Replay [Повтор экзамена]
+- title: Exam Replay
   description: Два замечательных предложения, которые помогут вам повысить ваши шансы на успех.
   href: ../deals.md
 - title: Поддержка сертификационных экзаменов
