--- a/learn-certs-pr/exams/ms-201.yml
+++ b/learn-certs-pr/exams/ms-201.yml
@@ -7,8 +7,8 @@ uid: exam.ms-201
 displayName: MS-201
 summary: |-
   <div>
-  <div style='color&#58; red;'><strong>Ввиду ситуации с распространением коронавируса (COVID-19) компания Microsoft вносит некоторые временные изменения в свою программу обучения и сертификации. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Узнать больше</a>.</strong><br/><br/></div>
-  <div style='font-weight&#58; bold;'>НОВАЯ ВЕРСИЯ ЭТОГО ЭКЗАМЕНА, <a href="/learn/certifications/exams/ms-203">MS-203</a>, СТАНЕТ ДОСТУПНА ОРИЕНТИРОВОЧНО 2 июня 2020 ГОДА. Вы сможете сдать этот экзамен до того, как он будет отменен ориентировочно 31 августа 2020. Примечание&#58; Экзамен будет отменен в 23&#58;59 по центральному стандартному времени<br/><br/></div>
+  <div><font color='red'><strong>Ввиду ситуации с распространением коронавируса (COVID-19) компания Microsoft вносит некоторые временные изменения в свою программу обучения и сертификации. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Узнать больше</a>.</strong></font><br/><br/></div>
+  <div><strong>Этот экзамен прошел 31 август 2020 года. Взамен доступен экзамен MS-203. Для получения дополнительной информации посетите <a href="/learn/certifications/exams/ms-203">страницу сведений об экзамене MS-203</a>.</strong><br/><br/></div>
   </div>
 
   Кандидатами на этот экзамен являются администраторы обмена сообщениями, которые развертывают, настраивают, управляют, устраняют неполадки и отслеживают получателей, разрешения, защиту почты, поток почты и общие папки как в локальных, так и в облачных корпоративных средах.
@@ -18,13 +18,10 @@ summary: |-
   Администраторы обмена сообщениями сотрудничают с Администратором безопасности и Администратором предприятия Microsoft 365 для реализации безопасной гибридной топологии, отвечающей бизнес-потребностям современной организации.
 
   Администратор обмена сообщениями должен иметь практические знания о типах аутентификации, лицензировании и интеграции с приложениями Microsoft 365.
-
-  <div style='font-weight&#58; bold;'><br/>Примечание&#58; После прохождении этого экзамена вы получите следующий сертификат&#58; <a href="/learn/certifications/m365-messaging-administrator">Microsoft 365 Certified&#58; Messaging Administrator Associate</a>.</div>
 subTitle: 'Этот экзамен позволяет оценить вашу способность выполнять следующие технические задачи: планирование и внедрение гибридной конфигурации и миграции; обеспечение безопасности среды обмена сообщениями; а также управление организационными настройками.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE3VUk9
 practiceTestUrl: https://www.mindhub.com/p/MU-MS-201?utm_source=microsoft&utm_medium=certpage&utm_campaign=msofficialpractice
-scheduleExamUrl: https://examregistration.microsoft.com/?locale=ru-ru&examcode=MS-201&examname=Exam%20MS-201:%20Implementing%20a%20Hybrid%20and%20Secure%20Messaging%20Platform&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Fms-201
 locales:
 - en
 levels:
