--- a/learn-certs-pr/exams/pl-200.yml
+++ b/learn-certs-pr/exams/pl-200.yml
@@ -14,8 +14,8 @@ summary: |-
 
   Кандидаты активно сотрудничают с членами группы обеспечения качества, чтобы гарантировать соответствие решений функциональным и нефункциональным требованиям. Они выявляют, создают и доставляют артефакты для упаковки и развертывания инженерам DevOps, а также проводят обучение по эксплуатации и обслуживанию администраторов Power Platform.
 
-  <div><strong><br/>Примечание&#58; Этот экзамен станет доступен в сентябре 2020 года.</strong></div>
-subTitle: 'Этот экзамен станет доступен в сентябре 2020 года. Этот экзамен позволяет оценить вашу способность выполнять следующие задачи: настройка Common Data Service; создание приложения с помощью Power Apps; создание Power Automate и управление им; внедрение чат-ботов Power Virtual Agents; и интеграция Power Apps с другими приложениями и службами.'
+  <div><strong><br/>Примечание&#58; Этот экзамен будет доступен 25 сентябре 2020 года или около того.</strong></div>
+subTitle: 'Этот экзамен будет доступен 25 сентябре 2020 года или около того. Этот экзамен позволяет оценить вашу способность выполнять следующие задачи: настройка Common Data Service; создание приложения с помощью Power Apps; создание Power Automate и управление им; внедрение чат-ботов Power Virtual Agents; и интеграция Power Apps с другими приложениями и службами.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4CQVs
 locales:
