--- a/learn-certs-pr/index.yml
+++ b/learn-certs-pr/index.yml
@@ -1,51 +1,51 @@
 ### YamlMime:CertificationHome
 
-title: Сертификации Microsoft
+title: Microsoft Certifications
 summary: Получите сертификаты, подтверждающие, что вы идете в ногу с современными техническими ролями и требованиями. Выберите роль, чтобы узнать о сертификациях.
 
 roles:
-  - name: developer
-    summary: Разработчики проектируют, создают, тестируют и поддерживают облачные решения.
+  - name: разработчик
+    summary: Developers [Разработчики] проектируют, создают, тестируют и поддерживают облачные решения.
     url: /learn/certifications/roles/developer
-  - name: administrator
-    summary: Администратор отвечает за реализацию, мониторинг и обслуживание решений Microsoft.
+  - name: администратор
+    summary: Administrator [Администратор] отвечает за реализацию, мониторинг и обслуживание решений Microsoft.
     url: /learn/certifications/roles/administrator
-  - name: solution-architect
-    summary: Архитектор решений должен обладать опытом в области вычислений, сети, хранения и безопасности.
+  - name: архитектор решений
+    summary: Solutions Architects [Архитектор решений] должен обладать опытом в области вычислений, сети, хранения и безопасности.
     url: /learn/certifications/roles/solutions-architect
   - name: data-engineer
-    summary: Инженеры данных проектируют и внедряют управление, мониторинг, безопасность и конфиденциальность данных, используя полный стек служб данных.
+    summary: Data Engineers [Инженеры данных] проектируют и внедряют управление, мониторинг, безопасность и конфиденциальность данных, используя полный набор служб данных.
     url: /learn/certifications/roles/data-engineer
   - name: data-scientist
-    summary: Специалисты по данным применяют методы машинного обучения для обучения, оценки и развертывания моделей, решающих проблемы бизнеса.
+    summary: Специалисты по обработке и анализу данных применяют методы машинного обучения для обучения, оценки и развертывания моделей, решающих проблемы бизнеса.
     url: /learn/certifications/roles/data-scientist
   - name: ai-engineer
-    summary: Инженеры AI используют Cognitive Services (когнитивные службы), Machine Learning (машинное обучение) и Knowledge Mining (майнинг знаний) для разработки и внедрения решений Microsoft AI.
+    summary: AI Engineers [Инженеры AI] используют Cognitive Services (когнитивные службы), Machine Learning (машинное обучение) и Knowledge Mining (майнинг знаний) для разработки и внедрения решений Microsoft AI.
     url: /learn/certifications/roles/ai-engineer
   - name: devops-engineer
-    summary: Инженеры DevOps объединяют людей, процессы и технологии для непрерывной разработки ценных продуктов и услуг, которые отвечают потребностям конечных пользователей и бизнес-целям.
+    summary: DevOps Engineers [Специалисты DevOps] объединяют людей, процессы и технологии для непрерывной разработки ценных продуктов и услуг, которые отвечают потребностям конечных пользователей и бизнес-целям.
     url: /learn/certifications/roles/devops-engineer
-  - name: security-engineer
-    summary: Инженеры по безопасности внедряют средства управления безопасностью и защиты от угроз, управляют удостоверениями и доступом, а также защищают данные, приложения и сети.
+  - name: инженеры по безопасности
+    summary: Security Engineers [Инженеры по безопасности] внедряют средства управления безопасностью и защиты от угроз, управляют удостоверениями и доступом, а также защищают данные, приложения и сети.
     url: /learn/certifications/roles/security-engineer
-  - name: functional-consultant
-    summary: Функциональные консультанты используют Microsoft Dynamics 365 для прогнозирования и планирования потребностей клиентов.
+  - name: функциональные консультанты
+    summary: Функциональные консультанты используют Microsoft Dynamics 365 и Microsoft Power Platform для прогнозирования и планирования потребностей клиентов.
     url: /learn/certifications/roles/functional-consultant
 
 
 certificationsSection:
   title: Станьте специалистом, сертифицированным Microsoft
-  summary: "Компания Microsoft предлагает пути сертификации для множества технологий. Для получения каждого их этих сертификатов необходимо сдать несколько экзаменов."
+  summary: "У Microsoft есть сертификации для многих технических ролей. Каждая из этих сертификаций предполагает сдачу серии экзаменов для получения сертификата."
   tiers:
-    - title: Сертификации по базовым знаниям 
+    - title: Сертификации по базовым знаниям
       summary: Рекомендуется для начала. Идеально подходит для тех, кто только начинает изучать технологии и думает о смене карьеры.
       certifications:
         - uid: certification.azure-fundamentals
         - uid: certification.microsoft-365-fundamentals
         - uid: certification.power-platform-fundamentals
       browseLink:
-        text: Смотреть сертификации по базовым знаниям 
-        url: /learn/certifications/browse?levels=beginner&term=fundamentals 
+        text: Смотреть сертификации по базовым знаниям
+        url: /learn/certifications/browse/?type=fundamentals 
     - title: Ролевые сертификации
       summary: Выберите ролевую сертификацию, чтобы начать осваивать ценные навыки для работы.
       certifications:
@@ -56,7 +56,7 @@ certificationsSection:
         text: Смотреть ролевые сертификации
         url: /learn/certifications/browse?resource_type=certification
     - title: Дополнительные сертификации
-      summary: Узнайте больше о специальностях  Microsoft Certified Educator, а также о технических сертификатах Microsoft Office.
+      summary: Узнайте больше о специализации Microsoft Certified Educator и технических сертификациям Microsoft Office.
       certifications:
         - uid: certification.azure-for-sap-workloads-specialty
         - uid: certification.microsoft-certified-educator
@@ -64,6 +64,13 @@ certificationsSection:
       browseLink:
         text: Смотреть дополнительные сертификации
         url: /learn/certifications/browse?resource_type=certification
+
+upworkSection:
+    title: Вы хотите получать дополнительный доход?
+    summary: Мы сотрудничаем со службой Upwork, чтобы связать фрилансеров, сертифицированных по работе с Azure, с клиентами.
+    signupLink:
+        text: Зарегистрируйтесь в Upwork
+        url: https://forms.office.com/Pages/ResponsePage.aspx?id=v4j5cvGGr0GRqy180BHbRw3HkB8qWX5Iq22_B4ihseZUN1haSVVPNUpINTRFRVRaQ1BRSzNCRllQNS4u
 
 trainingSection:
   title: Как подготовиться к сертификации
@@ -81,7 +88,7 @@ trainingSection:
       alt: Человек делает презентацию для четырех человек, сидящих за столом
       src: /learn/certifications/images/image-working-group.jpg
     title: Подготовка с инструктором
-    summary: Microsoft Learning Partners предлагают широкий спектр решений для удовлетворения ваших потребностей в обучении, а также достижения ваших целей обучения. Сертифицированные тренеры Microsoft прошли тщательное обучение и отвечают строгим требованиям технической сертификации.
+    summary: Microsoft Learning Partners предлагают широкий спектр решений для удовлетворения ваших потребностей в обучении, а также достижения ваших целей обучения. Microsoft Certified Trainers прошли тщательное обучение и отвечают строгим требованиям технической сертификации.
     browseLinks:
     - text: Смотреть все курсы обучения под руководством инструктора
       url: /learn/certifications/courses/browse/
@@ -93,7 +100,7 @@ resourcesSection:
       summary: Наша всемирная партнерская сеть обеспечивает гибкое, основанное на решениях, индивидуальное обучение в технологиях Microsoft.
       url: https://www.microsoft.com/learning/partners.aspx
     - title: Поддержка по вопросам сертификации и экзаменов
-      summary: Получите помощь, задав вопрос на форумах.  Модератор форума ответит в течение одного рабочего дня, с понедельника по пятницу.
+      summary: Получите помощь, задав вопрос на форумах. Модератор форума ответит в течение одного рабочего дня, с понедельника по пятницу.
       url: /learn/certifications/help
     - title: Просмотреть весь список сертификаций и экзаменов
       summary: Изучите все сертификаты, чтобы возвести свою карьеру на новый уровень.
@@ -104,9 +111,9 @@ statisticsSection:
   summary: Сертификаты дают вам профессиональное преимущество с доказательством наличия необходимых ролевых навыков в отрасли.
   video:
     pdfDownloadUrl: https://download.microsoft.com/download/C/A/A/CAA1BDA9-D61F-47D2-BC0A-C3A820B21DAF/Pearson_VUE_Value_of_IT_Certification_Survey_Summary_Report_2017.pdf
-    iframeTitle: Сертификации Microsoft
+    iframeTitle: Microsoft Certifications
     iframeSrc: https://www.microsoft.com/videoplayer/embed/RE3HGnx?pid=RE3HGnx-ax-0-id-oneplayer&jsapi=true&postJsllMsg=true&autoplay=false&mute=false&loop=false&market=en-us&playFullScreen=false
-    title: Преимущества сертификации Microsoft 
+    title: Преимущества Microsoft Certifications [Сертификации Microsoft]
     summary: После получения сертификата 23% сертифицированных технологов Microsoft сообщили о повышении зарплаты до 20%. Помимо этого, сертифицированные сотрудники нередко курируют своих коллег, получая возможность быстрого повышения. — технический документ 2017 Pearson VUE 2017 «Значение сертификации» (Value of Certification).
   items:
     - title: 38%
@@ -114,7 +121,7 @@ statisticsSection:
       note: IDC/Microsoft, облачные навыки и организационное влияние *Как облачные навыки способствуют росту карьеры ИТ-специалиста, май 2017 г.
     - title: 35%
       summary: ИТ-специалистов говорят, что они имеют больше влияния в облачных развертываниях, чем их коллеги во время развертываний других технологий.
-      note: IDC/Microsoft, облачные навыки и организационное влияние *Как облачные навыки способствуют росту карьеры ИТ-специалиста, май 2017 г.
-    - title: 36.9%
+      note: IDC/Microsoft, облачные навыки и организационное влияние *Как облачные навыки способствуют росту карьеры ИТ-специалиста, май 2017 г
+    - title: 36,9%
       summary: ИТ-специалистов заявили, что сертификация помогла им выполнить сложные задачи более уверенно.
-      note: Pearson VUE, The Value of IT Certification Survey, январь 2017 г.
+      note: Pearson VUE, The Value of IT Certification Survey, январь 2017 г
