--- a/learn-certs-pr/m365-enterprise-administrator.yml
+++ b/learn-certs-pr/m365-enterprise-administrator.yml
@@ -15,13 +15,13 @@ subTitle: Администраторы предприятий Microsoft 365 Ente
 levels:
 - advanced
 skills:
-- Разработка и внедрение служб Microsoft 365
-- Управление удостоверениями и ролями пользователя
+- Проектирование и внедрение служб Microsoft 365
+- Управление идентификацией и ролями пользователей
 - Управление доступом и аутентификацией
-- Планирование рабочих нагрузок и приложений Office 365
-- Внедрение современных служб устройств
+- Планирование рабочих пространств и приложений Office 365
+- Внедрение служб современных устройств
 - Внедрение Microsoft 365 для обеспечения безопасности и управления угрозами
-- Управление Microsoft 365 для управления и соответствия
+- Управление руководством и соответствием в Microsoft 365
 roles:
 - administrator
 type: role-based
@@ -54,7 +54,7 @@ resources:
 - title: Плакат с сертификацией
   description: Ознакомьтесь с обзором сертификации основ, ролевой и специальной сертификациями.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE2PjDI
-- title: Exam Replay [Повтор экзамена]
+- title: Exam Replay
   description: Два замечательных предложения, которые помогут вам повысить ваши шансы на успех.
   href: deals.md
 - title: Поддержка по вопросам сертификации
