--- a/learn-certs-pr/m365-teamwork-administrator.yml
+++ b/learn-certs-pr/m365-teamwork-administrator.yml
@@ -8,7 +8,7 @@ iconUrl: /media/learn/certification/badges/microsoft-certified-associate-badge.s
 summary: |-
   <div>
   <div><font color='red'><strong>Ввиду ситуации с распространением коронавируса (COVID-19) компания Microsoft вносит некоторые временные изменения в свою программу обучения и сертификации. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Узнать больше</a>.</strong></font><br/><br/></div>
-  <div><strong>Данная сертификация будет аннулирована 31 август 2020 года. Вы больше не сможете получить данный сертификат после этой даты. Любые сертификаты, полученные вами до даты отмены сертификации, будут по-прежнему отображаться в вашей выписке об успеваемости в <a href="https://www.microsoft.com/learning/dashboard.aspx">панели Сертификации</a>.</strong><br/><br/></div>
+  <div><strong>Данная сертификация была отменена 31 август 2020 года. Любые сертификаты, полученные вами до даты отмены сертификации, будут по-прежнему отображаться в вашей выписке об успеваемости в <a href="https://www.microsoft.com/learning/dashboard.aspx">панели Сертификации</a>.</strong><br/><br/></div>
   </div>
 
   Администраторы Microsoft 365 Teamwork настраивают, разворачивают и управляют рабочими нагрузками Office 365, ориентированными на эффективное и действенное сотрудничество, например SharePoint (онлайн, локально и гибридно), OneDrive и Команды (Teams).
@@ -57,7 +57,7 @@ resources:
 - title: Плакат с сертификацией
   description: Ознакомьтесь с обзором сертификации основ, ролевой и специальной сертификациями.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE2PjDI
-- title: Exam Replay [Повтор экзамена]
+- title: Exam Replay
   description: Два замечательных предложения, которые помогут вам повысить ваши шансы на успех.
   href: deals.md
 - title: Поддержка по вопросам сертификации
