--- a/learn-certs-pr/power-platform-functional-consultant-associate.yml
+++ b/learn-certs-pr/power-platform-functional-consultant-associate.yml
@@ -2,7 +2,7 @@
 title: 'Microsoft Certified: Power Platform Functional Consultant Associate'
 metadata:
   title: 'Microsoft Certified: Power Platform Functional Consultant Associate'
-  description: Эта сертификация станет доступна в сентябре 2020 года. Power Platform Functional Consultant должен обладать глубокими практическими знаниями о Power Platform, включая практическое понимание возможностей и ограничений.
+  description: Эта сертификация будет доступна 25 сентябре 2020 года или около того. Power Platform Functional Consultant должен обладать глубокими практическими знаниями о Power Platform, включая практическое понимание возможностей и ограничений.
 uid: certification.power-platform-functional-consultant-associate
 iconUrl: /media/learn/certification/badges/microsoft-certified-associate-badge.svg
 summary: |-
@@ -10,8 +10,8 @@ summary: |-
 
   Power Platform Functional Consultant должен обладать глубокими практическими знаниями о Power Platform, включая практическое понимание возможностей и ограничений. Они должны иметь практический опыт, используя инструменты производителя Power Platform для создания решений, использующих Power Platform и Microsoft 365. Сертифицированные функциональные консультанты должны обладать навыками моделирования данных, проектирования пользовательского интерфейса, анализа требований и анализа процессов.
 
-  <div><br/><strong>Примечание&#58; Эта сертификация станет доступна в сентябре 2020 года.</strong></div>
-subTitle: Эта сертификация станет доступна в сентябре 2020 года. Power Platform Functional Consultant должен обладать глубокими практическими знаниями о Power Platform, включая практическое понимание возможностей и ограничений.
+  <div><br/><strong>Примечание&#58; Эта сертификация будет доступна 25 сентябре 2020 года или около того.</strong></div>
+subTitle: Эта сертификация будет доступна 25 сентябре 2020 года или около того. Power Platform Functional Consultant должен обладать глубокими практическими знаниями о Power Platform, включая практическое понимание возможностей и ограничений.
 levels:
 - intermediate
 skills:
