--- a/learn-certs-pr/courses/az-104t00.yml
+++ b/learn-certs-pr/courses/az-104t00.yml
@@ -3,7 +3,6 @@ title: Microsoft Azure Administrator
 metadata:
   title: 'Course AZ-104T00-A: Microsoft Azure Administrator'
   description: 'Course AZ-104T00-A: Microsoft Azure Administrator'
-  iltScheduling: true
 uid: course.az-104t00
 courseNumber: 'AZ-104T00-A'
 hoursToComplete: 96
@@ -30,11 +29,13 @@ summary: |-
   #### Профиль аудитории
   Этот курс предназначен для администраторов Azure. Azure Administrator внедряет, управляет и следит за удостоверениями, управлением, хранением, вычислениями и виртуальными сетями в облачной среде. Администратор Azure обеспечивает, измеряет, отслеживает и корректирует ресурсы в зависимости от ситуации.
 prerequisitesSection: |-
-  Успешные администраторы Azure начинают эту роль с работы с операционными системами, виртуализацией, облачной инфраструктурой, структурами хранения и работе в сети.
-  - Понимание технологий локальной виртуализации, в том числе&#58; ВМ, виртуальные сети и виртуальные жесткие диски.
+  Успешные администраторы Azure начинают исполнять эту роль, имея опыт в виртуализации, работе в сети, идентификации и хранении.
+  - Понимание локальных технологий виртуализации, включая&#58; виртуальные машины, виртуальные сети и виртуальные жесткие диски.
   - Понимание конфигурации сети, включая TCP/IP, систему доменных имен (DNS), виртуальные частные сети (VPN), брандмауэры и технологии шифрования.
-  - Понимание концепций Active Directory, включая домены, леса, контроллеры доменов, репликацию, протокол Kerberos и протокол облегченного доступа к каталогам (LDAP).
+  - Понимание концепций Active Directory, включая пользователей, группы и контроль доступа на основе ролей.
   - Понимание устойчивости и аварийного восстановления, включая операции резервного копирования и восстановления.
+
+  Вы можете получить необходимую квалификацию и лучше понять Azure, пройдя курс [AZ-104&#58; Предварительные требования для администраторов Azure](/learn/paths/az-104-administrator-prerequisites/). Этот бесплатный онлайн-тренинг даст вам опыт, необходимый для успешного прохождения данного курса.
 outlineSection: |-
   ### Модуль 1&#58; Удостоверение
   В этом модуле вы узнаете, как защищать удостоверения с помощью Azure Active Directory и внедрять пользователей и группы.
@@ -42,28 +43,25 @@ outlineSection: |-
   - Azure Active Directory
   - Пользователи и группы
 
-
   #### Лабораторная работа&#58; Управление удостоверениями Azure Active Directory
 
-  После завершения этого модуля студенты получат следующее&#58;
+  После завершения этого модуля студенты смогут следующее&#58;
   - Защита и управление удостоверениями с помощью Azure Active Directory.
   - Реализация и управление пользователями и группами.
 
 
   ### Модуль 2&#58; Управления и соответствие
   В этом модуле вы узнаете об управлении своими подписками и учетными записями, реализации политик Azure и использовании контроля доступа на основе ролей.
-
   #### Уроки
   - Подписки и учетные записи
   - Политики Azure
   - контроля доступа на основе ролей (RBAC)
 
-
   #### Лабораторная работа&#58; Управление подписками и RBAC
 
   #### Лабораторная работа&#58; Контроль управления с помощью политики Azure
 
-  После завершения этого модуля студенты получат следующее&#58;
+  После завершения этого модуля студенты смогут следующее&#58; 
   - Внедрение и управление подписками и учетными записями Azure.
   - Реализация политики Azure, включая настраиваемые политики.
   - Использование RBAC для назначения разрешений.
@@ -77,16 +75,15 @@ outlineSection: |-
   - Azure PowerShell и CLI
   - ARM шаблоны
 
-
   #### Лабораторная работа&#58; Управление ресурсами Azure с помощью Azure Portal
 
   #### Лабораторная работа&#58; Управление ресурсами Azure с помощью шаблонов ARM
 
-  #### Лабораторная работа&#58; Управление ресурсами Azure с помощью Azure PowerShell
+  #### Лабораторная работа&#58; управление ресурсами Azure с помощью Azure PowerShell (необязательно)
 
-  #### Лабораторная работа&#58; Управление ресурсами Azure с помощью Azure CLI
+  #### Лабораторная работа&#58; управление ресурсами Azure с помощью Azure CLI (необязательно)
 
-  После завершения этого модуля студенты получат следующее&#58;
+  После завершения этого модуля студенты смогут следующее&#58; 
   - Использование Azure Resource Manager для организации ресурсов
   - Использование Azure Portal и Cloud Shell
   - Использование Azure PowerShell и CLI
@@ -102,15 +99,15 @@ outlineSection: |-
   - Брандмауэр Azure
   - Azure DNS
 
-
   #### Лабораторная работа&#58; Внедрение виртуальных сетей
 
-  После завершения этого модуля студенты получат следующее&#58;
+  После завершения этого модуля студенты смогут следующее&#58; 
   - Реализация виртуальных сетей и подсетей
   - Настройка публичной и частной IP-адресации
   - Настройка группы безопасности сети
   - Настройка брандмауэра Azure
   - Настройка частных и публичных зон DNS
+
 
   ### Модуль 5&#58; Межсайтовые подключения
   В этом модуле вы узнаете о возможностях межсайтовых подключениях, включая пиринг в VNet, шлюзы виртуальных сетей и соединения Site-to-Site.
@@ -119,35 +116,31 @@ outlineSection: |-
   - Соединения через VPN-шлюзы
   - ExpressRoute и Virtual WAN
 
-
   #### Лабораторная работа&#58; Внедрение межсайтовых подключений
 
-  После завершения этого модуля студенты получат следующее&#58;
+  После завершения этого модуля студенты смогут следующее&#58; 
   - Настройка пиринга в виртуальных сетях
-  - Настройка VPN-шлюзов.
+  - Настройка VPN-шлюзов
   - Выбор подходящего решения для межсайтового подключения
 
-  ### Модуль 6&#58; Управление сетевым трафиком
-  В этом модуле вы узнаете о стратегиях организации сетевого трафика, включая сетевую маршрутизацию и конечные точки служб, балансировщик нагрузки Azure Load Balancer, шлюз приложений Azure Application Gateway и диспетчер трафика.
 
+  ### Модуль 6&#58; Управление сетевым трафиком
+  В этом модуле вы узнаете о стратегиях организации сетевого трафика, включая сетевую маршрутизацию и конечные точки служб, балансировщик нагрузки Azure и шлюз приложений Azure.
   #### Уроки
   - Сетевая маршрутизация и конечные точки
   - Балансировщик нагрузки Azure
   - Шлюз приложений Azure
-  - Диспетчер трафика
-
 
   #### Лабораторная работа&#58; Реализация управления трафиком
 
-  После завершения этого модуля студенты получат следующее&#58;
+  После завершения этого модуля студенты смогут следующее&#58; 
   - Настройка сетевой маршрутизации, включая пользовательские маршруты и конечные точки обслуживания
   - Настройка балансировщика нагрузки Azure
   - Настройка шлюза приложений Azure
-  - Выбор подходящего решения для организации сетевого трафика
+
 
   ### Модуль 7&#58; Хранилище Azure
   В этом модуле вы узнаете об основных функциях и свойствах хранилища, включая учетные записи хранилища, хранилище blob-объектов, файлы Azure и синхронизацию файлов, безопасность хранилища и инструменты хранилища.
-
   #### Уроки
   - Учетные записи хранилища
   - Хранение BLOB-объектов
@@ -155,43 +148,40 @@ outlineSection: |-
   - Файлы Azure и синхронизация файлов
   - Управление хранилищем
 
-
   #### Лабораторная работа&#58; Управление хранилищем Azure
 
-  После завершения этого модуля студенты получат следующее&#58;
+  После завершения этого модуля студенты смогут следующее&#58; 
   - Создание учетных записей хранилища Azure
   - Настройка контейнеров BLOB-объектов
   - Безопасность хранилища Azure
   - Настройка общих папок Azure и синхронизация файлов
-  - Управление хранилищем с помощью таких инструментов, как Storage Explorer.
+  - Управление хранилищем с помощью таких инструментов, как Storage Explorer
+
 
   ### Модуль 8&#58; Виртуальные машины Azure
   В этом модуле вы узнаете о виртуальных машинах Azure, включая планирование, создание, доступность и расширения.
-
   #### Уроки
   - Планирование виртуальных машин
   - Создание виртуальных машин
   - Доступность виртуальной машины
   - Расширения виртуальных машин
 
-
   #### Лабораторная работа&#58; Управление виртуальными машинами
 
-  После завершения этого модуля студенты получат следующее&#58;
+  После завершения этого модуля студенты смогут следующее&#58; 
   - Планирование реализации виртуальных машин
-  - Создание виртуальных машин.
+  - Создание виртуальных машин
   - Настройка доступности виртуальной машины, включая наборы масштабов
   - Использование расширений виртуальной машины
 
-  ### Модуль 9&#58; Бессерверные вычисления
-  В этом модуле вы узнаете, как управлять функциями бессерверных вычислений, такими как служба приложений Azure, экземпляры контейнеров Azure и Kubernetes.
 
+  ### Модуль 9&#58; Бессерверные вычисления
+  В этом модуле вы узнаете, как администрировать функции бессерверных вычислений, такие как Служба приложений Azure, Экземпляры контейнеров Azure и Kubernetes.
   #### Уроки
   - Планы службы приложений Azure
   - Служба приложений Azure
   - Служба контейнеров
   - Служба Azure Kubernetes
-
 
   #### Лабораторная работа&#58; Внедрение веб-приложений
 
@@ -199,11 +189,12 @@ outlineSection: |-
 
   #### Лабораторная работа&#58; внедрение службы Azure Kubernetes
 
-  После завершения этого модуля студенты получат следующее&#58;
-  - Создание плана службы приложений
+  После завершения этого модуля студенты смогут следующее&#58; 
+  - Создание плана обслуживания приложения
   - Создание веб-приложения
   - Внедрение экземпляров контейнеров Azure
   - Внедрение службы Azure Kubernetes
+
 
   ### Модуль 10&#58; Защита данных
   В этом модуле вы узнаете о резервном копировании файлов и папок, а также о резервном копировании виртуальных машин.
@@ -211,26 +202,24 @@ outlineSection: |-
   - Резервное копирование файлов и папок
   - Резервное копирование виртуальных машин
 
-
   #### Лабораторная работа&#58; Реализация защиты данных
 
-  После завершения этого модуля студенты получат следующее&#58;
+  После завершения этого модуля студенты смогут следующее&#58; 
   - Резервное копирование и восстановление файлов и папок
   - Резервное копирование и восстановление виртуальных машин
 
+
   ### Модуль 11&#58; Мониторинг
   В данном модуле вы узнаете о мониторинге своей инфраструктуры Azure с помощью таких инструментов как Azure Monitor, оповещения и аналитику журналов.
-
   #### Уроки
   - Azure Monitor
   - Оповещения Azure
   - Аналитика журналов
   - Наблюдатель за сетями
 
-
   #### Лабораторная работа&#58; Внедрение мониторинга
 
-  После завершения этого модуля студенты получат следующее&#58;
+  После завершения этого модуля студенты смогут следующее&#58; 
   - Использование Azure Monitor.
   - Создание оповещений Azure.
   - Запросы с использованием аналитики Log Analytics.
