--- a/learn-certs-pr/courses/az-304t00.yml
+++ b/learn-certs-pr/courses/az-304t00.yml
@@ -3,7 +3,6 @@ title: Microsoft Azure Architect Design
 metadata:
   title: 'Course AZ-304T00-A: Microsoft Azure Architect Design'
   description: 'Course AZ-304T00-A: Microsoft Azure Architect Design'
-  iltScheduling: true
 uid: course.az-304t00
 courseNumber: 'AZ-304T00-A'
 hoursToComplete: 96
@@ -16,7 +15,7 @@ skillsGained:
 - skill: Рекомендовать решение, которое включает KeyVault
 - skill: Рекомендовать решение, которое включает в себя управляемые удостоверения Azure AD
 - skill: Рекомендовать решение для доступа к хранилищу
-- skill: Разработка и решение Azure Site Recovery
+- skill: Разработка решение Azure Site Recovery
 - skill: Рекомендовать решения для автомасштабирования
 - skill: Рекомендовать решения для контейнеров
 - skill: Рекомендовать решения для сетевой безопасности
@@ -45,55 +44,77 @@ prerequisitesSection: |-
   - Понимание концепций Active Directory, включая домены, леса, контроллеры доменов, репликацию, протокол Kerberos и протокол облегченного доступа к каталогам (LDAP).
   - Понимание устойчивости и аварийного восстановления, включая операции резервного копирования и восстановления.
 outlineSection: |-
-  ### Модуль 1&#58; Разработки для оптимизации затрат
-  В этом модуле вы узнаете, как оптимизировать затраты благодаря рекомендациям, разбивке расходов службой Azure, а также загрузить и просмотреть сведения об использовании. 01-View
+  ### Модуль 1&#58; Разработка вычислительных решений
+  В этом модуле вы узнаете о соответствующих вычислительных технологиях, включая виртуальные машины, службы приложений App Services, Service Fabric, Azure Functions, Windows Virtual Desktop и контейнеры.
   #### Уроки
-  - Рекомендации по решениям для управления затратами
-  - Рекомендуемые Viewpoints для минимизации затрат
+  - Рекомендации по решениям для обеспечения вычислений
+  - Определение подходящих вычислительных технологий
+  - Рекомендовать решения для контейнеров
+  - Рекомендации по решениям для автоматизации управления вычислениями
+
+  #### Лабораторная&#58; внедрение контейнеров в Azure
+  - Внедрение контейнеров, работающих на виртуальных машинах Azure
+  - Развертывание контейнеров в экземплярах контейнеров Azure Container Instances
+  - Развертывание контейнеров в кластерах службы Azure Kubernetes (AKS)
 
   После завершения этого модуля студенты смогут следующее&#58;
-  - Оптимизировать с помощью Azure Cost Management
-  - Разрабатывать с учетом стоимости
-  - Оптимизировать затраты на основе рекомендаций
+  - Обращаться к решению для автоматизации управления вычислениями
+  - Рекомендовать соответствующие вычислительные технологии, включая виртуальные машины и службы приложений
+  - Рекомендовать соответствующие AKS и ACI и конфигурации
 
 
-  ### Модуль 2&#58; Разработка решения для ведения журнала и мониторинга
-  В этом модуле вы узнаете о Azure Monitor, Azure Application Insights и Azure Sentinel. Вы сможете контролировать ресурсы Azure с помощью Azure Monitor, а также собирать и анализировать журналы ресурсов для Azure.
+  ### Модуль 2&#58; Проектирование сетевого решения
+  В этом модуле вы узнаете о решениях для сетевой адресации и разрешения имен, обеспечения работы сети и безопасности сети.
   #### Уроки
-  - Службы мониторинга Azure Monitoring
-  - Azure Monitor
+  - Рекомендации по решениям для сетевой адресации и разрешения имен
+  - Рекомендации по решениям для обеспечения работы сети
+  - Рекомендовать решения для сетевой безопасности
+  - Рекомендации по решениям для подключения к интернету и локальных сетей
+  - Рекомендации по решениям для автоматизации управления сетью
+  - Рекомендации по решениям для балансировки нагрузки и маршрутизации трафика
 
   После завершения этого модуля студенты смогут следующее&#58;
-  - Контролировать ресурсы Azure с помощью Azure Monitor
-  - Собирать и анализировать журналы ресурсов (Resource Logs) для ресурсов Azure
-  - Понимать, как Azure Sentinel собирает данные об устройствах, пользователях, инфраструктуре и приложениях
+  - Решения для сетевой адресации и разрешения имен
+  - Решения для сетевой безопасности, включая частные конечные точки, брандмауэры и шлюзы
+  - Рекомендации по сетевому подключению к Интернету, локальным сетям и другим виртуальным сетям
+  - Рекомендации по балансировке нагрузки и маршрутизации трафика
 
 
-  ### Модуль 3&#58; Разработка аутентификации
-  В этом модуле вы научитесь реализовывать условный доступ и многофакторную аутентификацию Azure, а также сможете рекомендовать методологию аутентификации для гибридной идентификации.
+  ### Модуль 3&#58; Проектирование миграции
+  В этом модуле вы узнаете, как рекомендовать решение для миграции приложений и виртуальных машин, а также решение для миграции баз данных.
   #### Уроки
-  - Рекомендация решений для многофакторной аутентификации
-  - Рекомендация решений для единого входа (SSO)
-  - Пять шагов для защиты идентификационной инфраструктуры
-  - Рекомендация решений для гибридной идентификации
-  - Рекомендация решений для интеграции B2B
+  - Оценка и локальные серверы и приложения для миграции
+  - Рекомендовать решения для миграции приложений и виртуальных машин
+  - Рекомендовать решения для миграции баз данных
 
   После завершения этого модуля студенты смогут следующее&#58;
-  - Планировать развертывания MFA
-  - Понимать Azure Active Directory Seamless Single Sign-On (SSO)
-  - Рекомендовать методологию аутентификации для гибридной идентификации
-  - Производить интеграцию с поставщиками удостоверений
+  - Оценивать локальные серверы и приложения для миграции
+  - Предлагать решения для миграции приложений и виртуальных машин
+  - Определение области миграции, включая избыточные, связанные, тривиальные и устаревшие данные
 
 
-  ### Модуль 4&#58; Разработка авторизации
+  ### Модуль 4&#58; Проектирование аутентификации и авторизации
   В этом модуле вы узнаете, как предоставлять удостоверения службам и понять иерархию групп управления и подписок.
   #### Уроки
-  - Защита инфраструктуры
-  - Рекомендации по иерархической структуре для групп управления, подписок и групп ресурсов
+  - Советы по управлению идентификацией и доступом
+  - Рекомендация решений для многофакторной аутентификации
+  - Пять шагов для защиты идентификационной инфраструктуры
+  - Рекомендация решений для единого входа (SSO)
+  - Рекомендация решений для гибридной идентификации
+  - Рекомендация решений для интеграции B2B
+  - Рекомендации по иерархической структуре для групп управления
+
+  #### Лабораторная&#58; управление аутентификацией и авторизацией Azure AD
+  - Развертывание виртуальной машины Azure с контроллером домена AD DS
+  - Создание и настройка клиента Azure AD
+  - Интеграция леса AD DS с клиентом Azure AD
 
   После завершения этого модуля студенты смогут следующее&#58;
   - Рекомендовать иерархию групп управления и подписок
   - Настраивать пользовательские определения и назначения ролей RBAC
+  - Планировать развертывания MFA
+  - Рекомендация решений для единого входа (SSO)
+  - Рекомендация решений для гибридной идентификации
 
 
   ### Модуль 5&#58; Управление проектами
@@ -108,46 +129,22 @@ outlineSection: |-
   - Обеспечивать контроль Azure Blueprints
 
 
-  ### Модуль 6&#58; Разработка безопасности для приложений
-  В этом модуле вы поймете доступность и избыточность хранилища ключей Azure Key Vault, управляемые удостоверения для ресурсов Azure. Кроме того, узнаете о назначаемых системой управляемых удостоверениях и виртуальных машинах Azure.
-  #### Уроки
-  - Рекомендации по решениям, использующих KeyVault
-  - Рекомендации по решениям, использующих управляемые удостоверения Azure AD
-
-  После завершения этого модуля студенты смогут следующее&#58;
-  - Понимать аутентификацию и авторизацию через Key Vault
-  - Понимать доступность и избыточность Azure Key Vault
-  - Понимать чем Blueprints отличаются от шаблонов Resource Manager и политики Azure
-
-
-  ### Модуль 7&#58; Разработка решения для баз данных
-  В этом модуле вы научитесь рекомендовать соответствующее хранилище данных Azure SQL, а также давать рекомендации по сервисным звеньям управляемых экземпляров SQL Azure.
+  ### Модуль 6&#58; Разработка решения для баз данных
+  В этом модуле вы научитесь рекомендовать соответствующее хранилище данных Azure SQL, а также давать рекомендации по служебным звеньям управляемых экземпляров SQL Azure.
   #### Уроки
   - Выбор подходящей платформы данных на основе требований
   - Обзор хранилища данных Azure
-  - Рекомендации по размеру сервисных звеньев базы данных
+  - Рекомендации по размеру служебных звеньев базы данных
   - Динамическое масштабирование базы данных SQL Azure и управляемых экземпляров SQL Azure
   - Рекомендуемые решения для шифрования данных в покое, при передаче и при использовании
 
   После завершения этого модуля студенты смогут следующее&#58;
-  - Рекомендации по размеру сервисных звеньев базы данных
+  - Рекомендации по размеру служебных звеньев базы данных
   - Рекомендуемые решения для шифрования данных в покое, при передаче и при использовании
   - Понимать контейнеры Azure Data Lake Store и Azure Blob Storage
 
 
-  ### Модуль 8&#58; Интеграция проектных данных
-  В этом модуле вы узнаете о потоках данных, использующих фабрику данных Azure Data Factory и архитектуру Azure Synapse Analytics.
-  #### Уроки
-  - Рекомендации по потокам данных
-  - Рекомендации по решениям для интеграции данных
-
-  После завершения этого модуля студенты смогут следующее&#58;
-  - Внедрять Azure Synapse Analytics
-  - Описывать, как данные передаются с помощью Azure Data Factory
-  - Демонстрировать, как использовать Azure Data Factory для загрузки данных в хранилище данных SQL
-
-
-  ### Модуль 9&#58; Выбор подходящей учетной записи хранения
+  ### Модуль 7&#58; Выбор подходящей учетной записи хранения
   В этом модуле вы узнаете, как рекомендовать разработку стратегии использования многоуровневого хранилища и управления многоуровневым хранилищем с помощью инструментов Azure.
   #### Уроки
   - Понимание уровней хранилища
@@ -157,6 +154,30 @@ outlineSection: |-
   После завершения этого модуля студенты смогут следующее&#58;
   - Рекомендовать инструменты для работы с хранилищем Azure
   - Разрабатывать уровни доступа к Azure Blob Storage
+
+
+  ### Модуль 8&#58; Интеграция проектных данных
+  В этом модуле вы узнаете о потоках данных, использующих фабрику данных Azure Data Factory и архитектуру Azure Synapse Analytics.
+  #### Уроки
+  - Рекомендации по потокам данных
+  - Рекомендации по решениям для интеграции данных
+
+  После завершения этого модуля студенты смогут следующее&#58; 
+  - Внедрять Azure Synapse Analytics
+  - Описывать, как данные передаются с помощью Azure Data Factory
+  - Демонстрировать, как использовать Azure Data Factory для загрузки данных в хранилище данных SQL
+
+
+  ### Модуль 9&#58; Разработка решения для ведения журнала и мониторинга
+  В этом модуле вы узнаете о Azure Monitor, Azure Application Insights и Azure Sentinel. Вы сможете отслеживать ресурсы Azure с помощью Azure Monitor, а также собирать и анализировать журналы ресурсов для Azure с помощью инструментов Azure.
+  #### Уроки
+  - Службы мониторинга Azure Monitoring
+  - Azure Monitor
+
+  После завершения этого модуля студенты смогут следующее&#58;
+  - Контролировать ресурсы Azure с помощью Azure Monitor
+  - Собирать и анализировать журналы ресурсов (Resource Logs) для ресурсов Azure
+  - Понимать, как Azure Sentinel собирает данные об устройствах, пользователях, инфраструктуре и приложениях.
 
 
   ### Модуль 10&#58; Разработка решения для резервного копирования и восстановления
@@ -178,7 +199,7 @@ outlineSection: |-
   ### Модуль 11&#58; Проектирование для высокой доступности
   В этом модуле вы узнаете о решениях для резервирования приложений и рабочих нагрузок, включая вычисления, базу данных и хранилище.
   #### Уроки
-  - Рекомендации по решениям для резервирования приложений и рабочей нагрузки
+  - Рекомендации по решениям для резервирования приложений и рабочей нагрузки.
   - Рекомендовать решения для автомасштабирования
   - Определение ресурсов, требующих высокой доступности
   - Определение типов хранилища для высокой доступности
@@ -190,59 +211,44 @@ outlineSection: |-
   - Рекомендовать решения для геоизбыточности рабочих нагрузок
 
 
-  ### Модуль 12&#58; Разработка вычислительных решений
-  В этом модуле вы узнаете о соответствующих вычислительных технологиях, включая виртуальные машины, службы приложений App Services, Service Fabric, Azure Functions, Windows Virtual Desktop и контейнеры. 
+  ### Модуль 12&#58; Разработки для оптимизации затрат
+  В этом модуле вы узнаете, как оптимизировать затраты благодаря рекомендациям, разбивке расходов службой Azure, а также загрузить и просмотреть сведения об использовании. 01-View
   #### Уроки
-  - Рекомендации по решениям для обеспечения вычислений
-  - Определение подходящих вычислительных технологий
-  - Рекомендовать решения для контейнеров
-  - Рекомендации по решениям для автоматизации управления вычислениями
+  - Рекомендации по решениям для управления затратами
+  - Рекомендуемые Viewpoints для минимизации затрат
 
   После завершения этого модуля студенты смогут следующее&#58;
-  - Обращаться к решению для автоматизации управления вычислениями
-  - Рекомендовать соответствующие вычислительные технологии, включая виртуальные машины и службы приложений
-  - Рекомендовать соответствующие AKS и ACI и конфигурации
+  - Оптимизировать с помощью Azure Cost Management
+  - Разрабатывать с учетом стоимости
+  - Оптимизировать затраты на основе рекомендаций
 
 
-  ### Модуль 13&#58; Проектирование сетевого решения
-  В этом модуле вы узнаете о решениях для сетевой адресации и разрешения имен, обеспечения работы сети и безопасности сети.
-  #### Уроки
-  - Рекомендации по решениям для сетевой адресации и разрешения имен
-  - Рекомендации по решениям для обеспечения работы сети
-  - Рекомендовать решения для сетевой безопасности
-  - Рекомендации по решениям для подключения к интернету и локальных сетей
-  - Рекомендации по решениям для автоматизации управления сетью
-  - Рекомендации по решениям для балансировки нагрузки и маршрутизации трафика
-
-  После завершения этого модуля слушатели будут понимать&#58;
-  - Решения для сетевой адресации и разрешения имен
-  - Решения для сетевой безопасности, включая частные конечные точки, брандмауэры и шлюзы
-  - Рекомендации по сетевому подключению к Интернету, локальным сетям и другим виртуальным сетям
-  - Рекомендации по балансировке нагрузки и маршрутизации трафика
-
-
-  ### Модуль 14&#58; Разработка архитектуры приложения
+  ### Модуль 13&#58; Разработка архитектуры приложения
   В этом модуле вы узнаете о решении для развертывания приложений, включая шаблоны ARM, Logic Apps или Azure Functions. Вы также узнаете об архитектуре микрослужб, включая Event Grid, Event Hubs, Service Bus, Storage Queues, Logic Apps, Azure Functions и веб-хуки.
   #### Уроки
   - Рекомендации по архитектуре микрослужб
   - Рекомендации по решению Orchestration для развертывания приложений
   - Рекомендации по решению для интеграции API
 
-  После завершения этого модуля студенты смогут следующее&#58;
+  #### Лабораторная&#58; реализация интеграции приложений логики Azure с сеткой событий Azure Event Grid
+  - Интеграция приложений логики Azure с сеткой событий Event Grid
+  - Запуск выполнения приложений логики в ответ на событие, представляющее изменение ресурса в пределах
+
+  После завершения этого модуля слушатели будут понимать&#58; 
   - Рекомендовать решения для развертывания с использованием шаблонов ARM, Logic Apps или Azure Functions
   - Рекомендовать решение для автоматизации мониторинга
   - Рекомендовать структуру хостинга для управления API
 
 
-  ### Модуль 15&#58; Разработка миграции
-  В этом модуле вы узнаете, как рекомендовать решение для миграции приложений и виртуальных машин, а также решение для миграции баз данных. 
+  ### Модуль 14&#58; Разработка безопасности для приложений
+  В этом модуле вы узнаете о решении для развертывания приложений, включая шаблоны ARM, Logic Apps или Azure Functions. Вы также узнаете об архитектуре микрослужб, включая Event Grid, Event Hubs, Service Bus, Storage Queues, Logic Apps, Azure Functions и веб-хуки.
   #### Уроки
-  - Оценка и локальные серверы и приложения для миграции
-  - Рекомендовать решения для миграции приложений и виртуальных машин
-  - Рекомендовать решения для миграции баз данных 
+  - Безопасность приложений и служб
+  - Рекомендация решений с использованием Key Vault
+  - Рекомендация решений с использованием управляемых удостоверений Azure AD
 
   После завершения этого модуля студенты смогут следующее&#58;
-  - Оценивать локальные серверы и приложения для миграции
-  - Предлагать решения для миграции приложений и виртуальных машин
-  - Определение области миграции, включая избыточные, связанные, тривиальные и устаревшие данные
+  - Понимать аутентификацию и авторизацию через Key Vault
+  - Понимать доступность и избыточность Azure Key Vault
+  - Понимать чем Blueprints отличаются от шаблонов Resource Manager и политики Azure
 
