--- a/learn-certs-pr/courses/ms-900t01.yml
+++ b/learn-certs-pr/courses/ms-900t01.yml
@@ -3,23 +3,21 @@ title: Microsoft 365 Fundamentals
 metadata:
   title: 'Course MS-900T01-A: Microsoft 365 Fundamentals'
   description: 'Course MS-900T01-A: Microsoft 365 Fundamentals'
-  iltScheduling: true
 uid: course.ms-900t01
 courseNumber: 'MS-900T01-A'
 hoursToComplete: 24
 iconUrl: /media/learn/certification/course.svg
 skillsGained:
-- skill: Различение моделей облачных сервисов.
-- skill: Определение ключевых различий между Microsoft 365 и Office 365.
-- skill: Планирование перехода на сервисы Microsoft 365.
+- skill: Различение различных моделей облачных служб.
+- skill: Определение ключевых различий между подписками Microsoft 365.
+- skill: Планирование перехода на службы Microsoft 365.
 - skill: Определение ключевых различий между локальными службами Microsoft и облачными службами Microsoft 365.
-- skill: Определение мобильности предприятия в Microsoft 365.
-- skill: Определение того, как сервисы Microsoft 365 поддерживают командную работу.
-- skill: Описать удостоверения, включая облачные, локальные и гибридные личные данные.
-- skill: Описать управление облачными устройствами и их защиту, включая использование Intune.
-- skill: Описать защиту данных, включая использование Azure Information Protection.
-- skill: Описать соответствие в целом и функции соответствия в Microsoft 365.
-- skill: Описать подписки, лицензии, биллинг и поддержку Microsoft 365
+- skill: Узнайте, как службы Microsoft 365 поддерживают командную работу.
+- skill: Опишите удостоверения, включая облачные, локальные и гибридные удостоверения.
+- skill: Описание управления облачными устройствами и их защиты, включая использование Intune.
+- skill: Описание защиты данных, включая использование Azure Information Protection.
+- skill: Описание соответствия в целом и функции соответствия в Microsoft 365.
+- skill: Описание подписок, лицензий, выставления счетов и поддержки Microsoft 365.
 learningPartnersLink: https://www.microsoft.com/learning/partners.aspx
 locales:
 - en
@@ -28,6 +26,7 @@ levels:
 roles:
 - business-user
 - administrator
+- maker
 products:
 - m365
 - windows
@@ -35,66 +34,56 @@ products:
 exams:
 - uid: exam.ms-900
 summary: |-
-  Этот курс предоставляет базовые знания о соображениях и преимуществах внедрения облачных сервисов и облачной модели «Программное обеспечение как услуга» (SaaS), с особым акцентом на предложениях облачных сервисов Microsoft 365. Вы начнете с изучения основ облачных вычислений, включая обзор облачных вычислений и, в частности, облачных сервисов Microsoft. Вы познакомитесь с Microsoft Azure и изучите различия между Microsoft 365 и Office 365. Затем вы проведете углубленный обзор Microsoft 365, включая сравнение локальных служб Microsoft с облачными службами Microsoft 365, обзор мобильности предприятия в Microsoft 365 и анализ того, как службы Microsoft 365 обеспечивают совместную работу. Затем курс анализирует, как безопасность, соответствие, конфиденциальность и доверие обрабатываются в Microsoft 365, и заканчивается обзором подписок, лицензий, биллинга и поддержки Microsoft 365.
+  Этот курс дает базовые знания о соображениях и преимуществах внедрения облачных служб и облачной модели «Программное обеспечение как услуга» (SaaS) с особым акцентом на предложениях облачных служб Microsoft 365. Вы начнете с изучения основ облачных вычислений, включая обзор облачных вычислений, в частности облачных служб Microsoft. Вы познакомитесь с Microsoft Azure и изучите различия между Microsoft 365 и Office 365. Затем вы выполните углубленный обзор Microsoft 365, включая сравнение локальных служб Microsoft с облачными службами Microsoft 365, обзор корпоративной мобильности в Microsoft 365 и анализ того, как службы Microsoft 365 обеспечивают совместную работу. Затем курс анализирует то, как безопасность, соответствие, конфиденциальность и доверие обрабатываются в Microsoft 365, и завершается обзором подписок, лицензий, выставления счетов и поддержки Microsoft 365.
 
   #### Профиль аудитории
-  Этот курс предназначен для ИТ-специалистов, которые стремятся развернуть облачные сервисы и управлять ими в своей организации, или которые просто хотят приобрести базовые знания по основам облачных вычислений. Это включает в себя соображения и преимущества использования облачных сервисов в целом и облачной модели «Программное обеспечение как услуга» (SaaS) в частности, с акцентом на предложениях облачных сервисов Microsoft 365.
+  Этот курс предназначен для лиц, принимающих бизнес-решения, и ИТ-специалистов, которые хотят развернуть облачные службы в своей организации или просто хотят получить базовые знания по основам облачных вычислений. Сюда входят соображения и преимущества внедрения облачных служб в целом и облачной модели «Программное обеспечение как услуга» (SaaS) в частности, с уделением общего внимания предложениям облачных служб Microsoft 365.
 prerequisitesSection: |-
-  Этот курс предназначен
-  для ИТ-специалистов, которые стремятся развертывать облачные сервисы и управлять ими в своих
-  организациях. Студенты должны иметь следующую подготовку&#58;
-  - Общие знания в области ИТ или любой общий опыт работы в ИТ-среде
-  - Общий опыт работы (уровень продаж)  с соответствующими локальными продуктами Microsoft, такими как Exchange Server, SharePoint, Office Professional, AD RMS и другие.
-  - Опыт выполнения бизнес/юридических/требований безопасности для ИТ
+  Этот курс предназначен для лиц, принимающих бизнес-решения, и ИТ-специалистов, которые хотят развернуть облачные службы в своей организации. Студенты должны иметь следующий опыт&#58;
+  - Общие знания в области сетей, вычислений и облачных технологий
 outlineSection: |-
   ### Модуль 1&#58; Облачные принципы
-  #### Уроки
+  Изучите основные концепции облачных вычислений и узнайте, как они могут помочь вашему бизнесу.
+  #### Уроки 
   - Принципы облачных вычислений
-  - Облачные сервисы Microsoft
-  - Переход на облачные сервисы
+  - Что такое Microsoft 365?
+  - Выбор облачного развертывания
 
 
-  #### Лабораторная &#58;Основы облачных технологий 
-  - Упражнение 1&#58; Определите подходящую облачную модель (лабораторная на бумаге)
+  ### Модуль 2&#58; Microsoft 365 продуктивность и возможности совместной работы
+  Узнайте о решениях, предназначенных для повышения производительности и совместной работы в Microsoft 365, а также о возможностях, которые помогают людям работать более продуктивно, используя Microsoft 365 - всемирное облако для повышения производительности.
+  #### Уроки 
+  - Решения Microsoft 365 для повышения производительности и совместной работы
+  - Задействуйте сотрудников с помощью Microsoft Stream, Teams и Yammer
+  - Успевайте больше с Office на всех устройствах
+  - Хранение файлов и совместное использование с OneDrive и SharePoint
 
 
-  ### Модуль 2&#58; Основные службы Microsoft 365
-  #### Уроки
-  - Основные сервисы Microsoft 365
-  - Локальные сервисы Microsoft и облачные сервисы в Microsoft 365
-  - Унифицированное управление конечными точками в Microsoft 365
-  - Совместная работа в Microsoft 365
+  ### Модуль 3&#58; Возможности управления бизнесом в Microsoft 365
+  Узнайте о решениях для управления бизнесом в Microsoft 365 и возможностях, которые помогают организациям работать более продуктивно с помощью Microsoft 365 - всемирного облака производительности.
+  #### Уроки 
+  - Управляйте своим бизнесом с Microsoft 365
+  - Упростите управление устройствами с помощью Microsoft Endpoint Manager
+  - Делайте больше и оставайтесь в безопасности с Windows 10
+  - Используйте бизнес-аналитику с помощью аналитики и отчетности Microsoft 365
 
 
-  #### Лабораторная &#58; Включение и настройка арендатора Microsoft 365
-  - Упражнение 1&#58; Активация и настройка клиента Microsoft 365
-  - Упражнение 2&#58; Изучение пользовательского и административного портала Microsoft 365
-  - Упражнение 3&#58; Настройка новых учетных записей пользователей и групп
-
-
-  ### Модуль 3&#58; Безопасность, соответствие, конфиденциальность и доверие в Microsoft 365
-  #### Уроки
-  - Основы организационной безопасности
-  - Функции безопасности в Microsoft 365
+  ### Модуль 4&#58; Безопасность и соответствие требованиям Microsoft 365
+  Узнайте о решениях для обеспечения безопасности и соответствия Microsoft 365, а также о доступных возможностях, которые помогут предприятиям защитить себя и выполнить нормативные требования.
+  #### Уроки 
+  - Принципы безопасности и области решений
   - Управление идентификацией и доступом
-  - Защита устройств и данных в Microsoft 365
-  - Соответствие в Microsoft 365
+  - Защита от угроз
+  - Облачная безопасность
+  - Защита информации и управление
+  - Управление соответствием
+  - Управление рисками, их обнаружение и аудит
 
 
-  #### Лабораторная &#58; Безопасность в Microsoft 365
-  - Упражнение 1&#58; Управление пользователями и устройствами в Azure Active Directory
-  - Упражнение 2&#58; Оценить защиту личности
-  - Упражнение 3&#58; Инструменты для соответствия
-
-
-  ### Упражнение 4&#58; Цены и поддержка Microsoft 365 
-  #### Уроки
-  - Подписки, лицензии и биллинг Microsoft 365
-  - Поддержка в Microsoft 365
-
-
-  #### Lab &#58; Управление подписками, лицензированием и поддержкой в M365
-  - Упражнение 1&#58; Исследуйте интерфейсы для выставления счетов и подписок
-  - Упражнение 2&#58; Добавить пробные лицензии для арендатора
-  - Упражнение 3&#58; Просмотреть варианты поддержки
+  ### Модуль 5&#58; Лицензирование и поддержка Microsoft 365
+  Узнайте больше о вариантах лицензирования, обслуживания и поддержки Microsoft 365.
+  #### Уроки 
+  - Определить варианты лицензирования, доступные в Microsoft 365
+  - Описание предложений поддержки в службах Microsoft 365
+  - Описание жизненного цикла службы в Microsoft 365
 
