--- a/learn-certs-pr/exams/az-203.yml
+++ b/learn-certs-pr/exams/az-203.yml
@@ -7,8 +7,8 @@ uid: exam.az-203
 displayName: AZ-203
 summary: |-
   <div>
-  <div style='color&#58; red;'><strong>Ввиду ситуации с распространением коронавируса (COVID-19) компания Microsoft вносит некоторые временные изменения в свою программу обучения и сертификации. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Узнать больше</a>.</strong><br/><br/></div>
-  <div style='font-weight&#58; bold;'>Этот экзамен прошел 31 мая 2020 года. Примечание&#58; Экзамен будет отменен в 23&#58;59 по центральному стандартному времени<br/><br/></div>
+  <div><font color='red'><strong>Ввиду ситуации с распространением коронавируса (COVID-19) компания Microsoft вносит некоторые временные изменения в свою программу обучения и сертификации. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Узнать больше</a>.</strong></font><br/><br/></div>
+  <div><strong>Этот экзамен прошел 31 август 2020 года. Взамен доступен экзамен AZ-204. Для получения дополнительной информации посетите <a href="/learn/certifications/exams/az-204">страницу сведений об экзамене AZ-204</a>.</strong><br/><br/></div>
   </div>
 
   Кандидатами на этот экзамен являются разработчики Azure, которые разрабатывают и внедряют облачные решения, такие как приложения и сервисы. Они участвуют на всех этапах разработки, от проектирования решений до разработки и развертывания, до тестирования и обслуживания. Они взаимодействуют с архитекторами облачных решений, администраторами облачных баз данных, администраторами облаков и клиентами для реализации решения.
@@ -17,8 +17,6 @@ summary: |-
   Кандидаты должны обладать навыками разработки приложений и сервисов с использованием инструментов и технологий Azure, включая хранение, безопасность, вычисление и связь.
 
   Кандидаты должны иметь по крайней мере один год опыта разработки масштабируемых решений на всех этапах разработки программного обеспечения и быть опытными по крайней мере в одном поддерживаемом облаком языке программирования.
-
-  <div style='font-weight&#58; bold;'><br/>ПРИМЕЧАНИЕ&#58; После прохождении этого экзамена вы получите следующий сертификат&#58; <a href="https://docs.microsoft.com/learn/certifications/azure-developer">Microsoft Certified&#58; Azure Developer Associate</a>.</div>
 subTitle: 'Этот экзамен позволяет оценить вашу способность выполнять следующие технические задачи: разрабатывать вычислительные решения Azure; разрабатывать вычислительные решения Azure Platform; развивать хранилище Azure; внедрять безопасность Azure; отслеживать, устранять неисправности и оптимизировать решения; подключаться и использовать службы Azure, а также и сторонние службы.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE3VEHC
@@ -27,9 +25,6 @@ locales:
 - ja
 - zh-cn
 - ko
-providers:
-- providerType: pearson-vue
-  examUrl: https://examregistration.microsoft.com/?locale=ru-ru&examcode=AZ-203&examname=Exam%20AZ-203:%20Developing%20Solutions%20for%20Microsoft%20Azure&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Faz-203
 levels:
 - intermediate
 skills:
