--- a/learn-certs-pr/exams/pl-400.yml
+++ b/learn-certs-pr/exams/pl-400.yml
@@ -6,16 +6,16 @@ metadata:
 uid: exam.pl-400
 displayName: PL-400
 summary: |-
-  <div style='color&#58; red;'><strong>Ввиду ситуации с распространением коронавируса (COVID-19) компания Microsoft вносит некоторые временные изменения в свою программу обучения и сертификации. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Узнать больше</a>.</strong><br/><br/></div>
+  <div><font color='red'><strong>Ввиду ситуации с распространением коронавируса (COVID-19) компания Microsoft вносит некоторые временные изменения в свою программу обучения и сертификации. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Узнать больше</a>.</strong></font><br/><br/></div>
 
   Кандидаты на этот экзамен проектируют, разрабатывают, защищают и решают проблемы с решениями Power Platform. Кандидаты внедряют компоненты решения, включая усовершенствование приложений, пользовательский интерфейс, системные интеграции, преобразование данных, пользовательскую автоматизацию процессов и пользовательские визуализации.
 
   Кандидаты должны обладать глубокими практическими знаниями о службах Power Platform, включая глубокое понимание возможностей, границ и ограничений. Кандидаты должны иметь общее представление о применении DevOps для Power Platform.
 
-  Кандидаты должны иметь опыт разработки, включая службы Power Platform, JavaScript, JSON, TypeScript, C#, HTML, .NET, Microsoft Azure, Microsoft 365, веб-службы RESTful, ASP.NET и Microsoft Power BI.
+  Кандидаты должны иметь опыт разработки, включая службы Power Platform, JavaScript, JSON, TypeScript, C #, HTML, .NET, Microsoft Azure, Microsoft 365, веб-службы RESTful, ASP.NET и Microsoft Power BI.
 
-  <div style='font-weight&#58; bold;'><br/>Примечание&#58; Этот экзамен станет доступен в октябре 2020 года.</div>
-subTitle: 'Этот экзамен станет доступен в октябре 2020 года. Этот позволяет оценить вашу способность выполнять следующие технические задачи: создание технических проектов; настройка общих служб данных; создание и настройка Power Apps; настройка автоматизации бизнес-процессов; улучшение опыта работы пользователей; расширение платформы; и развитие интеграций.'
+  <div><strong><br/>Примечание&#58; Этот экзамен будет доступен 25 сентябре 2020 года или около того.</strong></div>
+subTitle: 'Этот экзамен будет доступен 25 сентябре 2020 года или около того. Этот позволяет оценить вашу способность выполнять следующие технические задачи: создание технических проектов; настройка общих служб данных; создание и настройка Power Apps; настройка автоматизации бизнес-процессов; улучшение опыта работы пользователей; расширение платформы; и развитие интеграций.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4BeRV
 locales:
@@ -44,8 +44,8 @@ resources:
   description: Изучите все сертификаты в кратком руководстве по обучению и сертификации.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWtQJJ
 - title: Плакат с сертификацией
-  description: Ознакомьтесь с обзором сертификации основ, ролевой и специальной сертификациями.
-  href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE2PjDI
+  description: Посмотрите обзор, включая сертификаты по основам, ролям и специальностям для Dynamics 365 и Power Platform.
+  href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4CcQL
 - title: Exam Replay
   description: Два замечательных предложения, которые помогут вам повысить ваши шансы на успех.
   href: ../deals.md
