--- a/learn-certs-pr/mcse-productivity-certification.yml
+++ b/learn-certs-pr/mcse-productivity-certification.yml
@@ -1,8 +1,8 @@
 ### YamlMime:Certification
-title: MCSE Productivity Solutions Expert
+title: 'MCSE: Productivity Solutions Expert'
 metadata:
-  title: MCSE Productivity Solutions Expert
-  description: MCSE Productivity Solutions Expert
+  title: 'MCSE: Productivity Solutions Expert'
+  description: 'MCSE: Productivity Solutions Expert'
 uid: certification.mcse-productivity-certification
 iconUrl: /media/learn/certification/badges/mcse-badge.svg
 summary: |-
@@ -11,13 +11,13 @@ summary: |-
   <div><strong>Этот будет отменен 31 января 2021 года в 23&#58;59 по центральному времени. Вы больше не сможете получить данный сертификат после этой даты. Узнайте больше о <a href='/learn/certifications/retired-certifications'>предстоящих отменах сертификация</a>.</strong><br/><br/></div>
   </div>
 
-  Данная сертификация подтверждает, что у его обладателя есть все необходимые навыки для переноса работы компании в среду облачных вычислений, повышения производительности труда пользователей и расширения их возможностей, сокращения потерь данных и повышения уровня их защиты в масштабе организации. Эта сертификация может использоваться для удовлетворения одного из требований, чтобы стать [Администратором-экспертом Microsoft 365 Certified Enterprise](https://www.microsoft.com/learning/m365-enterprise-administrator.aspx)
+  Данная сертификация подтверждает, что у его обладателя есть все необходимые навыки для переноса работы компании в среду облачных вычислений, повышения производительности труда пользователей и расширения их возможностей, сокращения потерь данных и повышения уровня их защиты в масштабе организации. Эта сертификация может использоваться для удовлетворения одного из требований, чтобы стать [Администратором-экспертом Microsoft 365 Certified Enterprise](/learn/certifications/m365-enterprise-administrator).
 
-  Для того, чтобы получить сертификат эксперта MCSE Productivity Solutions Expert необходимо выполнить следующие требования&#58;
+  Для того, чтобы получить сертификат эксперта MCSE&#58; Productivity Solutions Expert необходимо выполнить следующие требования&#58;
   - Получить один обязательный сертификат&#58;
-    - Пример обязательной сертификации 1&#58; [MCSA Windows Server 2012](https://www.microsoft.com/learning/mcsa-windows-server-certification.aspx)
-    - Пример обязательной сертификации 2&#58; [MCSA Windows Server 2016](https://www.microsoft.com/learning/mcsa-windows-server-2016-certification.aspx)
-  - И сдать один из экзаменов на выбор
+    - Обязательный сертификат, Вариант 1&#58; [MCSA&#58; Windows Server 2012](/learn/certifications/mcsa-windows-server-certification)
+    - Обязательный сертификат, Вариант 2&#58; [MCSA&#58; Windows Server 2016](/learn/certifications/mcsa-windows-server-2016-certification)
+  - И сдать один из экзаменов на выбор&#58;
     - [70-333&#58; Deploying Enterprise Voice with Skype for Business 2015](/learn/certifications/exams/70-333)
     - [70-334&#58; Core Solutions of Microsoft Skype for Business](/learn/certifications/exams/70-334)
     - [70-339&#58; Managing Microsoft SharePoint Server 2016](/learn/certifications/exams/70-339)
@@ -43,6 +43,11 @@ exams:
 - uid: exam.70-345
 - uid: exam.70-339
 - uid: exam.70-333
+prerequisites:
+- uid: certification.mcsa-windows-server-certification
+  isOptional: false
+- uid: certification.mcsa-windows-server-2016-certification
+  isOptional: false
 resources:
 - title: Руководство по образовательным курсам и сертификациям
   description: Изучите все сертификаты в кратком руководстве по обучению и сертификации.
