--- a/learn-certs-pr/power-platform-developer-associate.yml
+++ b/learn-certs-pr/power-platform-developer-associate.yml
@@ -2,7 +2,7 @@
 title: 'Microsoft Certified: Power Platform Developer Associate'
 metadata:
   title: 'Microsoft Certified: Power Platform Developer Associate'
-  description: Эта сертификация станет доступна в октябре 2020 года. Кандидаты на сертификацию Microsoft Power Platform Developer Associate умеют проектировать, разрабатывать, обеспечивать защиту и устранять неполадки решений Power Platform.
+  description: Эта сертификация будет доступна 25 сентябре 2020 года или около того. Кандидаты на сертификацию Microsoft Power Platform Developer Associate умеют проектировать, разрабатывать, обеспечивать защиту и устранять неполадки решений Power Platform.
 uid: certification.power-platform-developer-associate
 iconUrl: /media/learn/certification/badges/microsoft-certified-associate-badge.svg
 summary: |-
@@ -10,12 +10,12 @@ summary: |-
 
   Кандидаты на сертификацию Microsoft Power Platform Developer Associate умеют проектировать, разрабатывать, обеспечивать защиту и устранять неполадки решений Power Platform. Они внедряют компоненты решения, включая усовершенствование приложений, пользовательский интерфейс, системные интеграции, преобразование данных, пользовательскую автоматизацию процессов и пользовательские визуализации.
 
-  Кандидаты должны иметь глубокие практические знания о службах Power Platform. Кандидаты также должны иметь глубокое понимание своих возможностей и ограничений. Они должны иметь общее представление о применении DevOps для платформы Microsoft Power.
+  Кандидаты должны иметь глубокие практические знания о службах Power Platform. Кандидаты также должны иметь глубокое понимание своих возможностей и ограничений. Они должны иметь общее представление о применении DevOps для платформы Power Platform.
 
   Их опыт разработки для этой роли должен включать службы Power Platform, JavaScript, JSON, TypeScript, C#, HTML, .NET, Microsoft Azure, Microsoft 365, веб-службы RESTful, ASP.NET и Power BI.
 
-  <div><br/><strong>Примечание&#58; Эта сертификация станет доступна в октябре 2020 года.</strong></div>
-subTitle: Эта сертификация станет доступна в октябре 2020 года. Кандидаты на сертификацию Microsoft Power Platform Developer Associate умеют проектировать, разрабатывать, обеспечивать защиту и устранять неполадки решений Power Platform.
+  <div><br/><strong>Примечание&#58; Эта сертификация будет доступна 25 сентябре 2020 года или около того.</strong></div>
+subTitle: Эта сертификация будет доступна 25 сентябре 2020 года или около того. Кандидаты на сертификацию Microsoft Power Platform Developer Associate умеют проектировать, разрабатывать, обеспечивать защиту и устранять неполадки решений Power Platform.
 levels:
 - intermediate
 skills:
@@ -37,19 +37,22 @@ pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4Bhz
 exams:
 - uid: exam.pl-400
 resources:
+- title: Плакат с сертификацией
+  description: Посмотрите обзор, включая сертификаты по основам, ролям и специальностям для Dynamics 365 и Power Platform.
+  href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4CcQL
+- title: Путешествие к сертификации
+  description: Изучите шаги для получения сертификата и имеющиеся ресурсы, которые помогут вам подготовиться.
+  href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4CfjH
 - title: Руководство по образовательным курсам и сертификациям
   description: Изучите все сертификаты в кратком руководстве по обучению и сертификации.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWtQJJ
-- title: Плакат с сертификацией
-  description: Ознакомьтесь с обзором сертификации основ, ролевой и специальной сертификациями.
-  href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE2PjDI
 - title: Exam Replay
   description: Два замечательных предложения, которые помогут вам повысить ваши шансы на успех.
   href: deals.md
-- title: Поддержка по вопросам сертификации
-  description: Получить помощь через форум поддержки сертификации Microsoft. Модератор форума ответит в течение одного рабочего дня, с понедельника по пятницу.
-  href: help.md
 - title: Панель управления сертификацией
   description: Просмотр и управление запланированными мероприятиями, сертификатами и транскриптами.
   href: https://www.microsoft.com/learning/dashboard.aspx
+- title: Поддержка по вопросам сертификации
+  description: Получить помощь через форум поддержки сертификации Microsoft. Модератор форума ответит в течение одного рабочего дня, с понедельника по пятницу.
+  href: help.md
 
