--- a/learn-certs-pr/roles/functional-consultant.yml
+++ b/learn-certs-pr/roles/functional-consultant.yml
@@ -1,12 +1,12 @@
 ### YamlMime:Role 
-title: Функциональный консультант 
+title: Functional Consultant 
 metadata: 
-  title: Функциональный консультант  
-  description: Функциональные консультанты используют Microsoft Dynamics 365 для прогнозирования и планирования потребностей клиентов.  
+  title: Functional Consultant 
+  description: Функциональные консультанты используют Microsoft Dynamics 365 и Microsoft Power Platform для прогнозирования и планирования потребностей клиентов. 
 uid: role.functional-consultant 
 summary: | 
-  Функциональные консультанты используют Microsoft Dynamics 365 для прогнозирования и планирования потребностей клиентов.
-subTitle: Функциональные консультанты используют Microsoft Dynamics 365 для прогнозирования и планирования потребностей клиентов.
+  Функциональные консультанты используют Microsoft Dynamics 365 и Microsoft Power Platform для прогнозирования и планирования потребностей клиентов.
+subTitle: Функциональные консультанты используют Microsoft Dynamics 365 и Microsoft Power Platform для прогнозирования и планирования потребностей клиентов.
 certificationPaths: 
 - title: Функциональный консультант Dynamics 365 Customer Service
   linkedInKeywords: Функциональный консультант Dynamics 365 Customer Service
@@ -69,8 +69,8 @@ certificationPaths:
     levels:
     - intermediate
 
-- title: Функциональный консультант Dynamics 365 Sales 
-  linkedInKeywords: Функциональный консультант Dynamics 365 Sales 
+- title: Функциональный консультант Dynamics 365 Sales
+  linkedInKeywords: Функциональный консультант Dynamics 365 Sales
   uid: certification-path.d365-functional-consultant-sales 
   prerequisites: 
   - uid: certification.d365-fundamentals
@@ -129,13 +129,19 @@ certifications:
   requiredExams:
   - uid: exam.mb-300
   - uid: exam.mb-330  
+- uid: certification.power-platform-functional-consultant-associate
+  requiredExams:
+  - uid: exam.pl-200  
+- uid: certification.d365-business-central-functional-consultant-associate
+  requiredExams:
+  - uid: exam.mb-800
 resources:
-- title: Руководство по образовательным курсам и сертификациям Microsoft 
+- title: Руководство по образовательным курсам и сертификациям Microsoft
   description: Изучите все сертификаты в кратком руководстве по обучению и сертификации.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWtQJJ
-- title: Буклет по образовательным курсам и сертификациям 
+- title: Буклет по образовательным курсам и сертификациям
   description: Выберите свой путь к успеху с этим буклетом по образовательным курсам и сертификациям.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE2PjDI
-- title: Поддержка сертификационных
+- title: Поддержка по вопросам сертификации
   href: ../help.md
-  description: Получить помощь через форум поддержки сертификации Microsoft Модератор форума ответит в течение одного рабочего дня, с понедельника по пятницу.
+  description: Получить помощь через форум поддержки сертификации Microsoft. Модератор форума ответит в течение одного рабочего дня, с понедельника по пятницу.
